@@ -89,14 +89,15 @@ public class InMemoryPartitionWriter implements PartitionWriter {
 
     @Override
     public LogConfig config(TopicPartition tp) {
-        return new LogConfig(Collections.emptyMap());
+        return new LogConfig(Map.of());
     }
 
     @Override
     public long append(
         TopicPartition tp,
         VerificationGuard verificationGuard,
-        MemoryRecords batch
+        MemoryRecords batch,
+        short transactionVersion
     ) {
         PartitionState state = partitionState(tp);
         state.lock.lock();
@@ -129,7 +130,7 @@ public class InMemoryPartitionWriter implements PartitionWriter {
         String transactionalId,
         long producerId,
         short producerEpoch,
-        short apiVersion
+        int apiVersion
     ) throws KafkaException {
         return CompletableFuture.completedFuture(new VerificationGuard());
     }
