@@ -16,13 +16,10 @@
  */
 package kafka.server.share;
 
-import kafka.cluster.PartitionListener;
 import kafka.server.ReplicaManager;
 
-import org.apache.kafka.clients.consumer.AcknowledgeType;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
-import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.errors.FencedStateEpochException;
 import org.apache.kafka.common.errors.GroupIdNotFoundException;
 import org.apache.kafka.common.errors.LeaderNotAvailableException;
@@ -30,18 +27,15 @@ import org.apache.kafka.common.errors.NotLeaderOrFollowerException;
 import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
 import org.apache.kafka.common.message.ShareAcknowledgeResponseData;
 import org.apache.kafka.common.message.ShareFetchResponseData.PartitionData;
-import org.apache.kafka.common.metrics.Metrics;
-import org.apache.kafka.common.metrics.Sensor;
-import org.apache.kafka.common.metrics.stats.Avg;
-import org.apache.kafka.common.metrics.stats.Max;
-import org.apache.kafka.common.metrics.stats.Meter;
 import org.apache.kafka.common.protocol.Errors;
-import org.apache.kafka.common.requests.ShareFetchRequest;
 import org.apache.kafka.common.requests.ShareRequestMetadata;
 import org.apache.kafka.common.utils.ImplicitLinkedHashCollection;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.coordinator.group.GroupConfigManager;
+import org.apache.kafka.server.common.ShareVersion;
+import org.apache.kafka.server.partition.PartitionListener;
 import org.apache.kafka.server.share.CachedSharePartition;
+import org.apache.kafka.server.share.ShareGroupListener;
 import org.apache.kafka.server.share.SharePartitionKey;
 import org.apache.kafka.server.share.acknowledge.ShareAcknowledgementBatch;
 import org.apache.kafka.server.share.context.FinalContext;
@@ -53,6 +47,7 @@ import org.apache.kafka.server.share.fetch.DelayedShareFetchPartitionKey;
 import org.apache.kafka.server.share.fetch.PartitionRotateStrategy;
 import org.apache.kafka.server.share.fetch.PartitionRotateStrategy.PartitionRotateMetadata;
 import org.apache.kafka.server.share.fetch.ShareFetch;
+import org.apache.kafka.server.share.metrics.ShareGroupMetrics;
 import org.apache.kafka.server.share.persister.Persister;
 import org.apache.kafka.server.share.session.ShareSession;
 import org.apache.kafka.server.share.session.ShareSessionCache;
@@ -62,6 +57,7 @@ import org.apache.kafka.server.util.FutureUtils;
 import org.apache.kafka.server.util.timer.SystemTimer;
 import org.apache.kafka.server.util.timer.SystemTimerReaper;
 import org.apache.kafka.server.util.timer.Timer;
+import org.apache.kafka.server.util.timer.TimerTask;
 import org.apache.kafka.storage.log.metrics.BrokerTopicStats;
 
 import org.slf4j.Logger;
@@ -69,17 +65,14 @@ import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 
@@ -92,9 +85,9 @@ public class SharePartitionManager implements AutoCloseable {
     private static final Logger log = LoggerFactory.getLogger(SharePartitionManager.class);
 
     /**
-     * The partition cache map is used to store the SharePartition objects for each share group topic-partition.
+     * The partition cache is used to store the SharePartition objects for each share group topic-partition.
      */
-    private final Map<SharePartitionKey, SharePartition> partitionCacheMap;
+    private final SharePartitionCache partitionCache;
 
     /**
      * The replica manager is used to fetch messages from the log.
@@ -128,14 +121,18 @@ public class SharePartitionManager implements AutoCloseable {
     private final Timer timer;
 
     /**
-     * The max in flight messages is the maximum number of messages that can be in flight at any one time per share-partition.
+     * The max in flight records is the maximum number of records that can be in flight at any one time per share-partition.
      */
-    private final int maxInFlightMessages;
+    private final int maxInFlightRecords;
 
     /**
      * The max delivery count is the maximum number of times a message can be delivered before it is considered to be archived.
      */
     private final int maxDeliveryCount;
+    /**
+     * The max wait time for a share fetch request having remote storage fetch.
+     */
+    private final long remoteFetchMaxWaitMs;
 
     /**
      * The persister is used to persist the share partition state.
@@ -152,35 +149,29 @@ public class SharePartitionManager implements AutoCloseable {
      */
     private final BrokerTopicStats brokerTopicStats;
 
-    /**
-     * The max fetch records is the maximum number of records that can be fetched by a share fetch request.
-     */
-    private final int maxFetchRecords;
-
     public SharePartitionManager(
         ReplicaManager replicaManager,
         Time time,
         ShareSessionCache cache,
         int defaultRecordLockDurationMs,
         int maxDeliveryCount,
-        int maxInFlightMessages,
-        int maxFetchRecords,
+        int maxInFlightRecords,
+        long remoteFetchMaxWaitMs,
         Persister persister,
         GroupConfigManager groupConfigManager,
-        Metrics metrics,
         BrokerTopicStats brokerTopicStats
     ) {
         this(replicaManager,
             time,
             cache,
-            new ConcurrentHashMap<>(),
+            new SharePartitionCache(),
             defaultRecordLockDurationMs,
             maxDeliveryCount,
-            maxInFlightMessages,
-            maxFetchRecords,
+            maxInFlightRecords,
+            remoteFetchMaxWaitMs,
             persister,
             groupConfigManager,
-            metrics,
+            new ShareGroupMetrics(time),
             brokerTopicStats
         );
     }
@@ -189,29 +180,29 @@ public class SharePartitionManager implements AutoCloseable {
         ReplicaManager replicaManager,
         Time time,
         ShareSessionCache cache,
-        Map<SharePartitionKey, SharePartition> partitionCacheMap,
+        SharePartitionCache partitionCache,
         int defaultRecordLockDurationMs,
         int maxDeliveryCount,
-        int maxInFlightMessages,
-        int maxFetchRecords,
+        int maxInFlightRecords,
+        long remoteFetchMaxWaitMs,
         Persister persister,
         GroupConfigManager groupConfigManager,
-        Metrics metrics,
+        ShareGroupMetrics shareGroupMetrics,
         BrokerTopicStats brokerTopicStats
     ) {
         this(replicaManager,
             time,
             cache,
-            partitionCacheMap,
+            partitionCache,
             defaultRecordLockDurationMs,
             new SystemTimerReaper("share-group-lock-timeout-reaper",
                 new SystemTimer("share-group-lock-timeout")),
             maxDeliveryCount,
-            maxInFlightMessages,
-            maxFetchRecords,
+            maxInFlightRecords,
+            remoteFetchMaxWaitMs,
             persister,
             groupConfigManager,
-            metrics,
+            shareGroupMetrics,
             brokerTopicStats
         );
     }
@@ -221,30 +212,31 @@ public class SharePartitionManager implements AutoCloseable {
             ReplicaManager replicaManager,
             Time time,
             ShareSessionCache cache,
-            Map<SharePartitionKey, SharePartition> partitionCacheMap,
+            SharePartitionCache partitionCache,
             int defaultRecordLockDurationMs,
             Timer timer,
             int maxDeliveryCount,
-            int maxInFlightMessages,
-            int maxFetchRecords,
+            int maxInFlightRecords,
+            long remoteFetchMaxWaitMs,
             Persister persister,
             GroupConfigManager groupConfigManager,
-            Metrics metrics,
+            ShareGroupMetrics shareGroupMetrics,
             BrokerTopicStats brokerTopicStats
     ) {
         this.replicaManager = replicaManager;
         this.time = time;
         this.cache = cache;
-        this.partitionCacheMap = partitionCacheMap;
+        this.partitionCache = partitionCache;
         this.defaultRecordLockDurationMs = defaultRecordLockDurationMs;
         this.timer = timer;
         this.maxDeliveryCount = maxDeliveryCount;
-        this.maxInFlightMessages = maxInFlightMessages;
+        this.maxInFlightRecords = maxInFlightRecords;
+        this.remoteFetchMaxWaitMs = remoteFetchMaxWaitMs;
         this.persister = persister;
         this.groupConfigManager = groupConfigManager;
-        this.shareGroupMetrics = new ShareGroupMetrics(Objects.requireNonNull(metrics), time);
-        this.maxFetchRecords = maxFetchRecords;
+        this.shareGroupMetrics = shareGroupMetrics;
         this.brokerTopicStats = brokerTopicStats;
+        this.cache.registerShareGroupListener(new ShareGroupListenerImpl());
     }
 
     /**
@@ -253,9 +245,12 @@ public class SharePartitionManager implements AutoCloseable {
      *
      * @param groupId The group id, this is used to identify the share group.
      * @param memberId The member id, generated by the group-coordinator, this is used to identify the client.
+     * @param shareAcquireMode The share acquire mode from the share fetch request.
      * @param fetchParams The fetch parameters from the share fetch request.
+     * @param sessionEpoch The session epoch for the member.
+     * @param maxFetchRecords The maximum number of records to fetch.
      * @param batchSize The number of records per acquired records batch.
-     * @param partitionMaxBytes The maximum number of bytes to fetch for each partition.
+     * @param topicIdPartitions The topic partitions to fetch for.
      *
      * @return A future that will be completed with the fetched messages.
      */
@@ -263,19 +258,21 @@ public class SharePartitionManager implements AutoCloseable {
         String groupId,
         String memberId,
         FetchParams fetchParams,
+        byte shareAcquireMode,
         int sessionEpoch,
+        int maxFetchRecords,
         int batchSize,
-        LinkedHashMap<TopicIdPartition, Integer> partitionMaxBytes
+        List<TopicIdPartition> topicIdPartitions
     ) {
         log.trace("Fetch request for topicIdPartitions: {} with groupId: {} fetch params: {}",
-                partitionMaxBytes.keySet(), groupId, fetchParams);
+            topicIdPartitions, groupId, fetchParams);
 
-        LinkedHashMap<TopicIdPartition, Integer> topicIdPartitions = PartitionRotateStrategy
+        List<TopicIdPartition> rotatedTopicIdPartitions = PartitionRotateStrategy
             .type(PartitionRotateStrategy.StrategyType.ROUND_ROBIN)
-            .rotate(partitionMaxBytes, new PartitionRotateMetadata(sessionEpoch));
+            .rotate(topicIdPartitions, new PartitionRotateMetadata(sessionEpoch));
 
         CompletableFuture<Map<TopicIdPartition, PartitionData>> future = new CompletableFuture<>();
-        processShareFetch(new ShareFetch(fetchParams, groupId, memberId, future, topicIdPartitions, batchSize, maxFetchRecords, brokerTopicStats));
+        processShareFetch(new ShareFetch(fetchParams, groupId, memberId, future, rotatedTopicIdPartitions, shareAcquireMode, batchSize, maxFetchRecords, brokerTopicStats));
 
         return future;
     }
@@ -303,7 +300,7 @@ public class SharePartitionManager implements AutoCloseable {
         acknowledgeTopics.forEach((topicIdPartition, acknowledgePartitionBatches) -> {
             topics.add(topicIdPartition.topic());
             SharePartitionKey sharePartitionKey = sharePartitionKey(groupId, topicIdPartition);
-            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey);
+            SharePartition sharePartition = partitionCache.get(sharePartitionKey);
             if (sharePartition != null) {
                 CompletableFuture<Throwable> future = new CompletableFuture<>();
                 sharePartition.acknowledge(memberId, acknowledgePartitionBatches).whenComplete((result, throwable) -> {
@@ -312,7 +309,15 @@ public class SharePartitionManager implements AutoCloseable {
                         future.complete(throwable);
                         return;
                     }
-                    acknowledgePartitionBatches.forEach(batch -> batch.acknowledgeTypes().forEach(this.shareGroupMetrics::recordAcknowledgement));
+                    acknowledgePartitionBatches.forEach(batch -> {
+                        // Client can either send a single entry in acknowledgeTypes which represents
+                        // the state of the complete batch or can send individual offsets state.
+                        if (batch.acknowledgeTypes().size() == 1) {
+                            shareGroupMetrics.recordAcknowledgement(batch.acknowledgeTypes().get(0), batch.lastOffset() - batch.firstOffset() + 1);
+                        } else {
+                            batch.acknowledgeTypes().forEach(shareGroupMetrics::recordAcknowledgement);
+                        }
+                    });
                     future.complete(null);
                 });
 
@@ -342,7 +347,7 @@ public class SharePartitionManager implements AutoCloseable {
      * The method returns a future that will be completed with the release response.
      *
      * @param groupId The group id, this is used to identify the share group.
-     * @param memberId The member id, generated by the group-coordinator, this is used to identify the client.
+     * @param memberId The member id is used to identify the client.
      *
      * @return A future that will be completed with the release response.
      */
@@ -351,27 +356,26 @@ public class SharePartitionManager implements AutoCloseable {
         String memberId
     ) {
         log.trace("Release session request for groupId: {}, memberId: {}", groupId, memberId);
-        Uuid memberIdUuid = Uuid.fromString(memberId);
         List<TopicIdPartition> topicIdPartitions = cachedTopicIdPartitionsInShareSession(
-            groupId, memberIdUuid);
+            groupId, memberId);
         // Remove the share session from the cache.
-        ShareSessionKey key = shareSessionKey(groupId, memberIdUuid);
+        ShareSessionKey key = shareSessionKey(groupId, memberId);
         if (cache.remove(key) == null) {
             log.error("Share session error for {}: no such share session found", key);
             return FutureUtils.failedFuture(Errors.SHARE_SESSION_NOT_FOUND.exception());
         } else {
-            log.debug("Removed share session with key " + key);
+            log.debug("Removed share session with key {}", key);
         }
 
         // Additionally release the acquired records for the respective member.
         if (topicIdPartitions.isEmpty()) {
-            return CompletableFuture.completedFuture(Collections.emptyMap());
+            return CompletableFuture.completedFuture(Map.of());
         }
 
         Map<TopicIdPartition, CompletableFuture<Throwable>> futuresMap = new HashMap<>();
         topicIdPartitions.forEach(topicIdPartition -> {
             SharePartitionKey sharePartitionKey = sharePartitionKey(groupId, topicIdPartition);
-            SharePartition sharePartition = partitionCacheMap.get(sharePartitionKey);
+            SharePartition sharePartition = partitionCache.get(sharePartitionKey);
             if (sharePartition == null) {
                 log.error("No share partition found for groupId {} topicPartition {} while releasing acquired topic partitions", groupId, topicIdPartition);
                 futuresMap.put(topicIdPartition, CompletableFuture.completedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
@@ -397,12 +401,27 @@ public class SharePartitionManager implements AutoCloseable {
         return mapAcknowledgementFutures(futuresMap, Optional.empty());
     }
 
+    /**
+     * The method creates a timer task to delay the share fetch request for maxWaitMs duration.
+     * A future is created and returned which will be completed when the timer task is completed.
+     *
+     * @param maxWaitMs The duration after which the timer task will be completed.
+     *
+     * @return A future that will be completed when the timer task is completed.
+     */
+    public CompletableFuture<Void> createIdleShareFetchTimerTask(long maxWaitMs) {
+        CompletableFuture<Void> future = new CompletableFuture<>();
+        TimerTask idleShareFetchTimerTask = new IdleShareFetchTimerTask(maxWaitMs, future);
+        replicaManager.addShareFetchTimerRequest(idleShareFetchTimerTask);
+        return future;
+    }
+
     private CompletableFuture<Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData>> mapAcknowledgementFutures(
         Map<TopicIdPartition, CompletableFuture<Throwable>> futuresMap,
         Optional<Consumer<Set<String>>> failedMetricsHandler
     ) {
         CompletableFuture<Void> allFutures = CompletableFuture.allOf(
-            futuresMap.values().toArray(new CompletableFuture[0]));
+            futuresMap.values().toArray(new CompletableFuture<?>[0]));
         return allFutures.thenApply(v -> {
             Map<TopicIdPartition, ShareAcknowledgeResponseData.PartitionData> result = new HashMap<>();
             // Keep the set as same topic might appear multiple times. Multiple partitions can fail for same topic.
@@ -426,29 +445,29 @@ public class SharePartitionManager implements AutoCloseable {
     /**
      * The newContext method is used to create a new share fetch context for every share fetch request.
      * @param groupId The group id in the share fetch request.
-     * @param shareFetchData The topic-partitions and their corresponding maxBytes data in the share fetch request.
+     * @param shareFetchData The topic-partitions in the share fetch request.
      * @param toForget The topic-partitions to forget present in the share fetch request.
-     * @param reqMetadata The metadata in the share fetch request.
-     * @param isAcknowledgeDataPresent This tells whether the fetch request received includes piggybacked acknowledgements or not
+     * @param memberId The member id in the share fetch request.
+     * @param shareSessionEpoch The epoch of share session utilized in the share fetch request.
+     * @param isAcknowledgeDataPresent This tells whether the fetch request received includes piggybacked acknowledgements or not.
+     * @param clientConnectionId The client connection id.
      * @return The new share fetch context object
      */
-    public ShareFetchContext newContext(String groupId, Map<TopicIdPartition, ShareFetchRequest.SharePartitionData> shareFetchData,
-                                        List<TopicIdPartition> toForget, ShareRequestMetadata reqMetadata, Boolean isAcknowledgeDataPresent) {
+    public ShareFetchContext newContext(
+        String groupId,
+        List<TopicIdPartition> shareFetchData,
+        List<TopicIdPartition> toForget,
+        String memberId,
+        int shareSessionEpoch,
+        Boolean isAcknowledgeDataPresent,
+        String clientConnectionId
+    ) {
         ShareFetchContext context;
-        // TopicPartition with maxBytes as 0 should not be added in the cachedPartitions
-        Map<TopicIdPartition, ShareFetchRequest.SharePartitionData> shareFetchDataWithMaxBytes = new HashMap<>();
-        shareFetchData.forEach((tp, sharePartitionData) -> {
-            if (sharePartitionData.maxBytes > 0) shareFetchDataWithMaxBytes.put(tp, sharePartitionData);
-        });
         // If the request's epoch is FINAL_EPOCH or INITIAL_EPOCH, we should remove the existing sessions. Also, start a
         // new session in case it is INITIAL_EPOCH. Hence, we need to treat them as special cases.
-        if (reqMetadata.isFull()) {
-            ShareSessionKey key = shareSessionKey(groupId, reqMetadata.memberId());
-            if (reqMetadata.epoch() == ShareRequestMetadata.FINAL_EPOCH) {
-                // If the epoch is FINAL_EPOCH, don't try to create a new session.
-                if (!shareFetchDataWithMaxBytes.isEmpty()) {
-                    throw Errors.INVALID_REQUEST.exception();
-                }
+        if (isFull(shareSessionEpoch)) {
+            ShareSessionKey key = shareSessionKey(groupId, memberId);
+            if (shareSessionEpoch == ShareRequestMetadata.FINAL_EPOCH) {
                 if (cache.get(key) == null) {
                     log.error("Share session error for {}: no such share session found", key);
                     throw Errors.SHARE_SESSION_NOT_FOUND.exception();
@@ -456,45 +475,45 @@ public class SharePartitionManager implements AutoCloseable {
                 context = new FinalContext();
             } else {
                 if (isAcknowledgeDataPresent) {
-                    log.error("Acknowledge data present in Initial Fetch Request for group {} member {}", groupId, reqMetadata.memberId());
+                    log.error("Acknowledge data present in Initial Fetch Request for group {} member {}", groupId, memberId);
                     throw Errors.INVALID_REQUEST.exception();
                 }
                 if (cache.remove(key) != null) {
                     log.debug("Removed share session with key {}", key);
                 }
                 ImplicitLinkedHashCollection<CachedSharePartition> cachedSharePartitions = new
-                        ImplicitLinkedHashCollection<>(shareFetchDataWithMaxBytes.size());
-                shareFetchDataWithMaxBytes.forEach((topicIdPartition, reqData) ->
-                    cachedSharePartitions.mustAdd(new CachedSharePartition(topicIdPartition, reqData, false)));
-                ShareSessionKey responseShareSessionKey = cache.maybeCreateSession(groupId, reqMetadata.memberId(),
-                        time.milliseconds(), cachedSharePartitions);
+                        ImplicitLinkedHashCollection<>(shareFetchData.size());
+                shareFetchData.forEach(topicIdPartition ->
+                    cachedSharePartitions.mustAdd(new CachedSharePartition(topicIdPartition, false)));
+                ShareSessionKey responseShareSessionKey = cache.maybeCreateSession(groupId, memberId,
+                    cachedSharePartitions, clientConnectionId);
                 if (responseShareSessionKey == null) {
-                    log.error("Could not create a share session for group {} member {}", groupId, reqMetadata.memberId());
-                    throw Errors.SHARE_SESSION_NOT_FOUND.exception();
+                    log.error("Could not create a share session for group {} member {}", groupId, memberId);
+                    throw Errors.SHARE_SESSION_LIMIT_REACHED.exception();
                 }
 
-                context = new ShareSessionContext(reqMetadata, shareFetchDataWithMaxBytes);
+                context = new ShareSessionContext(shareSessionEpoch, shareFetchData);
                 log.debug("Created a new ShareSessionContext with key {} isSubsequent {} returning {}. A new share " +
                         "session will be started.", responseShareSessionKey, false,
-                        partitionsToLogString(shareFetchDataWithMaxBytes.keySet()));
+                        partitionsToLogString(shareFetchData));
             }
         } else {
             // We update the already existing share session.
             synchronized (cache) {
-                ShareSessionKey key = shareSessionKey(groupId, reqMetadata.memberId());
+                ShareSessionKey key = shareSessionKey(groupId, memberId);
                 ShareSession shareSession = cache.get(key);
                 if (shareSession == null) {
                     log.error("Share session error for {}: no such share session found", key);
                     throw Errors.SHARE_SESSION_NOT_FOUND.exception();
                 }
-                if (shareSession.epoch != reqMetadata.epoch()) {
+                if (shareSession.epoch != shareSessionEpoch) {
                     log.debug("Share session error for {}: expected epoch {}, but got {} instead", key,
-                            shareSession.epoch, reqMetadata.epoch());
+                            shareSession.epoch, shareSessionEpoch);
                     throw Errors.INVALID_SHARE_SESSION_EPOCH.exception();
                 }
                 Map<ShareSession.ModifiedTopicIdPartitionType, List<TopicIdPartition>> modifiedTopicIdPartitions = shareSession.update(
-                        shareFetchDataWithMaxBytes, toForget);
-                cache.touch(shareSession, time.milliseconds());
+                    shareFetchData, toForget);
+                cache.updateNumPartitions(shareSession);
                 shareSession.epoch = ShareRequestMetadata.nextEpoch(shareSession.epoch);
                 log.debug("Created a new ShareSessionContext for session key {}, epoch {}: " +
                                 "added {}, updated {}, removed {}", shareSession.key(), shareSession.epoch,
@@ -503,7 +522,7 @@ public class SharePartitionManager implements AutoCloseable {
                         partitionsToLogString(modifiedTopicIdPartitions.get(ShareSession.ModifiedTopicIdPartitionType.UPDATED)),
                         partitionsToLogString(modifiedTopicIdPartitions.get(ShareSession.ModifiedTopicIdPartitionType.REMOVED))
                 );
-                context = new ShareSessionContext(reqMetadata, shareSession);
+                context = new ShareSessionContext(shareSessionEpoch, shareSession);
             }
         }
         return context;
@@ -512,32 +531,51 @@ public class SharePartitionManager implements AutoCloseable {
     /**
      * The acknowledgeSessionUpdate method is used to update the request epoch and lastUsed time of the share session.
      * @param groupId The group id in the share fetch request.
-     * @param reqMetadata The metadata in the share acknowledge request.
+     * @param memberId The member id in the share fetch request.
+     * @param shareSessionEpoch The epoch of share session utilized in the share fetch request.
      */
-    public void acknowledgeSessionUpdate(String groupId, ShareRequestMetadata reqMetadata) {
-        if (reqMetadata.epoch() == ShareRequestMetadata.INITIAL_EPOCH) {
+    public void acknowledgeSessionUpdate(String groupId, String memberId, int shareSessionEpoch) {
+        if (shareSessionEpoch == ShareRequestMetadata.INITIAL_EPOCH) {
             // ShareAcknowledge Request cannot have epoch as INITIAL_EPOCH (0)
             throw Errors.INVALID_SHARE_SESSION_EPOCH.exception();
         } else {
             synchronized (cache) {
-                ShareSessionKey key = shareSessionKey(groupId, reqMetadata.memberId());
+                ShareSessionKey key = shareSessionKey(groupId, memberId);
                 ShareSession shareSession = cache.get(key);
                 if (shareSession == null) {
                     log.debug("Share session error for {}: no such share session found", key);
                     throw Errors.SHARE_SESSION_NOT_FOUND.exception();
                 }
 
-                if (reqMetadata.epoch() == ShareRequestMetadata.FINAL_EPOCH) {
+                if (shareSessionEpoch == ShareRequestMetadata.FINAL_EPOCH) {
                     // If the epoch is FINAL_EPOCH, then return. Do not update the cache.
                     return;
-                } else if (shareSession.epoch != reqMetadata.epoch()) {
+                } else if (shareSession.epoch != shareSessionEpoch) {
                     log.debug("Share session error for {}: expected epoch {}, but got {} instead", key,
-                            shareSession.epoch, reqMetadata.epoch());
+                            shareSession.epoch, shareSessionEpoch);
                     throw Errors.INVALID_SHARE_SESSION_EPOCH.exception();
                 }
-                cache.touch(shareSession, time.milliseconds());
+                cache.updateNumPartitions(shareSession);
                 shareSession.epoch = ShareRequestMetadata.nextEpoch(shareSession.epoch);
             }
+        }
+    }
+
+    /**
+     * The handler for share version feature metadata changes.
+     * @param shareVersion the new share version feature
+     * @param isEnabledFromConfig whether the share version feature is enabled from config
+     */
+    public void onShareVersionToggle(ShareVersion shareVersion, boolean isEnabledFromConfig) {
+        // Clear the cache and remove all share partitions from the cache if the share version does
+        // not support share groups.
+        if (!shareVersion.supportsShareGroups() && !isEnabledFromConfig) {
+            cache.removeAllSessions();
+            Set<SharePartitionKey> sharePartitionKeys = partitionCache.cachedSharePartitionKeys();
+            // Remove all share partitions from partition cache.
+            sharePartitionKeys.forEach(sharePartitionKey ->
+                removeSharePartitionFromCache(sharePartitionKey, partitionCache, replicaManager)
+            );
         }
     }
 
@@ -550,11 +588,11 @@ public class SharePartitionManager implements AutoCloseable {
      * @return The list of cached topic-partitions in the share session if present, otherwise an empty list.
      */
     // Visible for testing.
-    List<TopicIdPartition> cachedTopicIdPartitionsInShareSession(String groupId, Uuid memberId) {
+    List<TopicIdPartition> cachedTopicIdPartitionsInShareSession(String groupId, String memberId) {
         ShareSessionKey key = shareSessionKey(groupId, memberId);
         ShareSession shareSession = cache.get(key);
         if (shareSession == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<TopicIdPartition> cachedTopicIdPartitions = new ArrayList<>();
         shareSession.partitionMap().forEach(cachedSharePartition -> cachedTopicIdPartitions.add(
@@ -572,9 +610,10 @@ public class SharePartitionManager implements AutoCloseable {
     @Override
     public void close() throws Exception {
         this.timer.close();
+        this.shareGroupMetrics.close();
     }
 
-    private ShareSessionKey shareSessionKey(String groupId, Uuid memberId) {
+    private ShareSessionKey shareSessionKey(String groupId, String memberId) {
         return new ShareSessionKey(groupId, memberId);
     }
 
@@ -584,9 +623,9 @@ public class SharePartitionManager implements AutoCloseable {
 
     // Visible for testing.
     void processShareFetch(ShareFetch shareFetch) {
-        if (shareFetch.partitionMaxBytes().isEmpty()) {
-            // If there are no partitions to fetch then complete the future with an empty map.
-            shareFetch.maybeComplete(Collections.emptyMap());
+        if (shareFetch.topicIdPartitions().isEmpty() || shareFetch.maxFetchRecords() == 0 || shareFetch.fetchParams().maxBytes == 0) {
+            // If there are no partitions or no data requested to fetch then complete the future with an empty map.
+            shareFetch.maybeComplete(Map.of());
             return;
         }
 
@@ -594,7 +633,7 @@ public class SharePartitionManager implements AutoCloseable {
         LinkedHashMap<TopicIdPartition, SharePartition> sharePartitions = new LinkedHashMap<>();
         // Track the topics for which we have received a share fetch request for metrics.
         Set<String> topics = new HashSet<>();
-        for (TopicIdPartition topicIdPartition : shareFetch.partitionMaxBytes().keySet()) {
+        for (TopicIdPartition topicIdPartition : shareFetch.topicIdPartitions()) {
             topics.add(topicIdPartition.topic());
             SharePartitionKey sharePartitionKey = sharePartitionKey(
                 shareFetch.groupId(),
@@ -633,8 +672,10 @@ public class SharePartitionManager implements AutoCloseable {
                 // immediately then the requests might be waiting in purgatory until the share partition
                 // is initialized. Hence, trigger the completion of all pending delayed share fetch requests
                 // for the share partition.
-                if (!initialized)
+                if (!initialized) {
+                    shareGroupMetrics.partitionLoadTime(sharePartition.loadStartTimeMs());
                     replicaManager.completeDelayedShareFetchRequest(delayedShareFetchKey);
+                }
             });
             sharePartitions.put(topicIdPartition, sharePartition);
         }
@@ -647,7 +688,7 @@ public class SharePartitionManager implements AutoCloseable {
 
         // If all the partitions in the request errored out, then complete the fetch request with an exception.
         if (shareFetch.errorInAllPartitions()) {
-            shareFetch.maybeComplete(Collections.emptyMap());
+            shareFetch.maybeComplete(Map.of());
             // Do not proceed with share fetch processing as all the partitions errored out.
             return;
         }
@@ -655,25 +696,24 @@ public class SharePartitionManager implements AutoCloseable {
         // Add the share fetch to the delayed share fetch purgatory to process the fetch request.
         // The request will be added irrespective of whether the share partition is initialized or not.
         // Once the share partition is initialized, the delayed share fetch will be completed.
-        addDelayedShareFetch(new DelayedShareFetch(shareFetch, replicaManager, fencedSharePartitionHandler(), sharePartitions), delayedShareFetchWatchKeys);
+        addDelayedShareFetch(new DelayedShareFetch(shareFetch, replicaManager, fencedSharePartitionHandler(), sharePartitions, shareGroupMetrics, time, remoteFetchMaxWaitMs), delayedShareFetchWatchKeys);
     }
 
     private SharePartition getOrCreateSharePartition(SharePartitionKey sharePartitionKey) {
-        return partitionCacheMap.computeIfAbsent(sharePartitionKey,
+        return partitionCache.computeIfAbsent(sharePartitionKey,
                 k -> {
-                    long start = time.hiResClockMs();
                     int leaderEpoch = ShareFetchUtils.leaderEpoch(replicaManager, sharePartitionKey.topicIdPartition().topicPartition());
                     // Attach listener to Partition which shall invoke partition change handlers.
                     // However, as there could be multiple share partitions (per group name) for a single topic-partition,
                     // hence create separate listeners per share partition which holds the share partition key
                     // to identify the respective share partition.
-                    SharePartitionListener listener = new SharePartitionListener(sharePartitionKey, replicaManager, partitionCacheMap);
+                    SharePartitionListener listener = new SharePartitionListener(sharePartitionKey, replicaManager, partitionCache);
                     replicaManager.maybeAddListener(sharePartitionKey.topicIdPartition().topicPartition(), listener);
-                    SharePartition partition = new SharePartition(
+                    return new SharePartition(
                             sharePartitionKey.groupId(),
                             sharePartitionKey.topicIdPartition(),
                             leaderEpoch,
-                            maxInFlightMessages,
+                            maxInFlightRecords,
                             maxDeliveryCount,
                             defaultRecordLockDurationMs,
                             timer,
@@ -683,8 +723,6 @@ public class SharePartitionManager implements AutoCloseable {
                             groupConfigManager,
                             listener
                     );
-                    this.shareGroupMetrics.partitionLoadTime(start);
-                    return partition;
                 });
     }
 
@@ -701,7 +739,7 @@ public class SharePartitionManager implements AutoCloseable {
         }
 
         // Remove the partition from the cache as it's failed to initialize.
-        removeSharePartitionFromCache(sharePartitionKey, partitionCacheMap, replicaManager);
+        removeSharePartitionFromCache(sharePartitionKey, partitionCache, replicaManager);
         // The partition initialization failed, so add the partition to the erroneous partitions.
         log.debug("Error initializing share partition with key {}", sharePartitionKey, throwable);
         shareFetch.addErroneous(sharePartitionKey.topicIdPartition(), throwable);
@@ -721,7 +759,7 @@ public class SharePartitionManager implements AutoCloseable {
                 // The share partition is fenced hence remove the partition from map and let the client retry.
                 // But surface the error to the client so client might take some action i.e. re-fetch
                 // the metadata and retry the fetch on new leader.
-                removeSharePartitionFromCache(sharePartitionKey, partitionCacheMap, replicaManager);
+                removeSharePartitionFromCache(sharePartitionKey, partitionCache, replicaManager);
             }
         };
     }
@@ -730,15 +768,23 @@ public class SharePartitionManager implements AutoCloseable {
         return new SharePartitionKey(groupId, topicIdPartition);
     }
 
+    /**
+     * Returns true if this is a full share fetch request.
+     */
+    private boolean isFull(int epoch) {
+        return (epoch == ShareRequestMetadata.INITIAL_EPOCH) || (epoch == ShareRequestMetadata.FINAL_EPOCH);
+    }
+
     private static void removeSharePartitionFromCache(
         SharePartitionKey sharePartitionKey,
-        Map<SharePartitionKey, SharePartition> map,
+        SharePartitionCache partitionCache,
         ReplicaManager replicaManager
     ) {
-        SharePartition sharePartition = map.remove(sharePartitionKey);
+        SharePartition sharePartition = partitionCache.remove(sharePartitionKey);
         if (sharePartition != null) {
             sharePartition.markFenced();
             replicaManager.removeListener(sharePartitionKey.topicIdPartition().topicPartition(), sharePartition.listener());
+            replicaManager.completeDelayedShareFetchRequest(new DelayedShareFetchGroupKey(sharePartitionKey.groupId(), sharePartitionKey.topicIdPartition()));
         }
     }
 
@@ -769,16 +815,16 @@ public class SharePartitionManager implements AutoCloseable {
 
         private final SharePartitionKey sharePartitionKey;
         private final ReplicaManager replicaManager;
-        private final Map<SharePartitionKey, SharePartition> partitionCacheMap;
+        private final SharePartitionCache partitionCache;
 
         SharePartitionListener(
             SharePartitionKey sharePartitionKey,
             ReplicaManager replicaManager,
-            Map<SharePartitionKey, SharePartition> partitionCacheMap
+            SharePartitionCache partitionCache
         ) {
             this.sharePartitionKey = sharePartitionKey;
             this.replicaManager = replicaManager;
-            this.partitionCacheMap = partitionCacheMap;
+            this.partitionCache = partitionCache;
         }
 
         @Override
@@ -808,80 +854,65 @@ public class SharePartitionManager implements AutoCloseable {
                     topicPartition, sharePartitionKey);
                 return;
             }
-            removeSharePartitionFromCache(sharePartitionKey, partitionCacheMap, replicaManager);
+            removeSharePartitionFromCache(sharePartitionKey, partitionCache, replicaManager);
         }
     }
 
-    static class ShareGroupMetrics {
+    /**
+     * The ShareGroupListenerImpl is used to listen for group events. The share group is associated
+     * with the group id, need to handle the group events for the share group.
+     */
+    private class ShareGroupListenerImpl implements ShareGroupListener {
+
+        @Override
+        public void onMemberLeave(String groupId, String memberId) {
+            releaseSession(groupId, memberId);
+        }
+
+        @Override
+        public void onGroupEmpty(String groupId) {
+            // Remove all share partitions from the cache. Instead of defining an API in SharePartitionCache
+            // for removing all share partitions for a group, share partitions are removed after fetching
+            // associated topic-partitions from the cache. This is done to mark the share partitions fenced
+            // and remove the listeners from the replica manager.
+            Set<TopicIdPartition> topicIdPartitions = partitionCache.topicIdPartitionsForGroup(groupId);
+            if (topicIdPartitions != null) {
+                // Remove all share partitions from partition cache.
+                topicIdPartitions.forEach(topicIdPartition ->
+                    removeSharePartitionFromCache(new SharePartitionKey(groupId, topicIdPartition), partitionCache, replicaManager)
+                );
+            }
+        }
+    }
+
+    /**
+     * The IdleShareFetchTimerTask creates a timer task for a share fetch request which tries to initialize a new share
+     * session when the share session cache is full. Such a request is delayed for maxWaitMs by passing the corresponding
+     * IdleShareFetchTimerTask to {@link ReplicaManager#delayedShareFetchTimer}.
+     */
+    private static class IdleShareFetchTimerTask extends TimerTask {
+
         /**
-         * share-acknowledgement (share-acknowledgement-rate and share-acknowledgement-count) - The total number of offsets acknowledged for share groups (requests to be ack).
-         * record-acknowledgement (record-acknowledgement-rate and record-acknowledgement-count) - The number of records acknowledged per acknowledgement type.
-         * partition-load-time (partition-load-time-avg and partition-load-time-max) - The time taken to load the share partitions.
+         * This future is used to complete the share fetch request when the timer task is completed.
          */
+        private final CompletableFuture<Void> future;
 
-        public static final String METRICS_GROUP_NAME = "share-group-metrics";
-
-        public static final String RECORD_ACK_SENSOR_PREFIX = "record-acknowledgement";
-        public static final String RECORD_ACK_RATE = "record-acknowledgement-rate";
-        public static final String RECORD_ACK_COUNT = "record-acknowledgement-count";
-        public static final String ACK_TYPE = "ack-type";
-
-        public static final String PARTITION_LOAD_TIME_SENSOR = "partition-load-time-sensor";
-        public static final String PARTITION_LOAD_TIME_AVG = "partition-load-time-avg";
-        public static final String PARTITION_LOAD_TIME_MAX = "partition-load-time-max";
-
-        public static final Map<Byte, String> RECORD_ACKS_MAP = new HashMap<>();
-        
-        private final Time time;
-        private final Map<Byte, Sensor> recordAcksSensorMap = new HashMap<>();
-        private final Sensor partitionLoadTimeSensor;
-
-        static {
-            RECORD_ACKS_MAP.put((byte) 1, AcknowledgeType.ACCEPT.toString());
-            RECORD_ACKS_MAP.put((byte) 2, AcknowledgeType.RELEASE.toString());
-            RECORD_ACKS_MAP.put((byte) 3, AcknowledgeType.REJECT.toString());
+        public IdleShareFetchTimerTask(
+            long delayMs,
+            CompletableFuture<Void> future
+        ) {
+            super(delayMs);
+            this.future = future;
         }
 
-        public ShareGroupMetrics(Metrics metrics, Time time) {
-            this.time = time;
-            for (Map.Entry<Byte, String> entry : RECORD_ACKS_MAP.entrySet()) {
-                recordAcksSensorMap.put(entry.getKey(), metrics.sensor(String.format("%s-%s-sensor", RECORD_ACK_SENSOR_PREFIX, entry.getValue())));
-                recordAcksSensorMap.get(entry.getKey())
-                    .add(new Meter(
-                        metrics.metricName(
-                            RECORD_ACK_RATE,
-                            METRICS_GROUP_NAME,
-                            "Rate of records acknowledged per acknowledgement type.",
-                            ACK_TYPE, entry.getValue()),
-                        metrics.metricName(
-                            RECORD_ACK_COUNT,
-                            METRICS_GROUP_NAME,
-                            "The number of records acknowledged per acknowledgement type.",
-                            ACK_TYPE, entry.getValue())));
-            }
-
-            partitionLoadTimeSensor = metrics.sensor(PARTITION_LOAD_TIME_SENSOR);
-            partitionLoadTimeSensor.add(metrics.metricName(
-                    PARTITION_LOAD_TIME_AVG,
-                    METRICS_GROUP_NAME,
-                    "The average time in milliseconds to load the share partitions."),
-                new Avg());
-            partitionLoadTimeSensor.add(metrics.metricName(
-                    PARTITION_LOAD_TIME_MAX,
-                    METRICS_GROUP_NAME,
-                    "The maximum time in milliseconds to load the share partitions."),
-                new Max());
-        }
-
-        void recordAcknowledgement(byte ackType) {
-            // unknown ack types (such as gaps for control records) are intentionally ignored
-            if (recordAcksSensorMap.containsKey(ackType)) {
-                recordAcksSensorMap.get(ackType).record();
-            }
-        }
-
-        void partitionLoadTime(long start) {
-            partitionLoadTimeSensor.record(time.hiResClockMs() - start);
+        /**
+         * The run method which is executed when the timer task expires. This completes the future indicating that the
+         * delay for the corresponding share fetch request is over.
+         */
+        @Override
+        public void run() {
+            future.complete(null);
         }
     }
+
 }
