@@ -22,7 +22,6 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -42,9 +41,9 @@ public class TasksTupleTest {
 
     @Test
     public void testTasksCannotBeNull() {
-        assertThrows(NullPointerException.class, () -> new TasksTuple(null, Collections.emptyMap(), Collections.emptyMap()));
-        assertThrows(NullPointerException.class, () -> new TasksTuple(Collections.emptyMap(), null, Collections.emptyMap()));
-        assertThrows(NullPointerException.class, () -> new TasksTuple(Collections.emptyMap(), Collections.emptyMap(), null));
+        assertThrows(NullPointerException.class, () -> new TasksTuple(null, Map.of(), Map.of()));
+        assertThrows(NullPointerException.class, () -> new TasksTuple(Map.of(), null, Map.of()));
+        assertThrows(NullPointerException.class, () -> new TasksTuple(Map.of(), Map.of(), null));
     }
 
     @Test
@@ -61,11 +60,11 @@ public class TasksTupleTest {
         TasksTuple tuple = new TasksTuple(activeTasks, standbyTasks, warmupTasks);
 
         assertEquals(activeTasks, tuple.activeTasks());
-        assertThrows(UnsupportedOperationException.class, () -> tuple.activeTasks().put("not allowed", Collections.emptySet()));
+        assertThrows(UnsupportedOperationException.class, () -> tuple.activeTasks().put("not allowed", Set.of()));
         assertEquals(standbyTasks, tuple.standbyTasks());
-        assertThrows(UnsupportedOperationException.class, () -> tuple.standbyTasks().put("not allowed", Collections.emptySet()));
+        assertThrows(UnsupportedOperationException.class, () -> tuple.standbyTasks().put("not allowed", Set.of()));
         assertEquals(warmupTasks, tuple.warmupTasks());
-        assertThrows(UnsupportedOperationException.class, () -> tuple.warmupTasks().put("not allowed", Collections.emptySet()));
+        assertThrows(UnsupportedOperationException.class, () -> tuple.warmupTasks().put("not allowed", Set.of()));
     }
 
     @Test
@@ -123,27 +122,6 @@ public class TasksTupleTest {
     }
 
     @Test
-    public void testMerge() {
-        TasksTuple tuple1 = new TasksTuple(
-            Map.of(SUBTOPOLOGY_1, Set.of(1, 2, 3)),
-            Map.of(SUBTOPOLOGY_2, Set.of(4, 5, 6)),
-            Map.of(SUBTOPOLOGY_3, Set.of(7, 8, 9))
-        );
-
-        TasksTuple tuple2 = new TasksTuple(
-            Map.of(SUBTOPOLOGY_1, Set.of(10, 11)),
-            Map.of(SUBTOPOLOGY_2, Set.of(12, 13)),
-            Map.of(SUBTOPOLOGY_3, Set.of(14, 15))
-        );
-
-        TasksTuple mergedTuple = tuple1.merge(tuple2);
-
-        assertEquals(Map.of(SUBTOPOLOGY_1, Set.of(1, 2, 3, 10, 11)), mergedTuple.activeTasks());
-        assertEquals(Map.of(SUBTOPOLOGY_2, Set.of(4, 5, 6, 12, 13)), mergedTuple.standbyTasks());
-        assertEquals(Map.of(SUBTOPOLOGY_3, Set.of(7, 8, 9, 14, 15)), mergedTuple.warmupTasks());
-    }
-
-    @Test
     public void testContainsAny() {
         TasksTuple tuple1 = new TasksTuple(
             Map.of(SUBTOPOLOGY_1, Set.of(1, 2, 3)),
@@ -151,21 +129,41 @@ public class TasksTupleTest {
             Map.of(SUBTOPOLOGY_3, Set.of(7, 8, 9))
         );
 
-        TasksTuple tuple2 = new TasksTuple(
-            Map.of(SUBTOPOLOGY_1, Set.of(3, 10, 11)),
+        // Test with overlapping active tasks
+        TasksTupleWithEpochs tuple2 = new TasksTupleWithEpochs(
+            Map.of(SUBTOPOLOGY_1, Map.of(3, 5, 10, 5, 11, 5)),
             Map.of(SUBTOPOLOGY_2, Set.of(12, 13)),
             Map.of(SUBTOPOLOGY_3, Set.of(14, 15))
         );
 
         assertTrue(tuple1.containsAny(tuple2));
 
-        TasksTuple tuple3 = new TasksTuple(
-            Map.of(SUBTOPOLOGY_1, Set.of(10, 11)),
+        // Test with no overlapping tasks
+        TasksTupleWithEpochs tuple3 = new TasksTupleWithEpochs(
+            Map.of(SUBTOPOLOGY_1, Map.of(10, 5, 11, 5)),
             Map.of(SUBTOPOLOGY_2, Set.of(12, 13)),
             Map.of(SUBTOPOLOGY_3, Set.of(14, 15))
         );
 
         assertFalse(tuple1.containsAny(tuple3));
+
+        // Test with overlapping standby tasks
+        TasksTupleWithEpochs tuple4 = new TasksTupleWithEpochs(
+            Map.of(SUBTOPOLOGY_1, Map.of(10, 5, 11, 5)),
+            Map.of(SUBTOPOLOGY_2, Set.of(4, 12, 13)),
+            Map.of(SUBTOPOLOGY_3, Set.of(14, 15))
+        );
+
+        assertTrue(tuple1.containsAny(tuple4));
+
+        // Test with overlapping warmup tasks
+        TasksTupleWithEpochs tuple5 = new TasksTupleWithEpochs(
+            Map.of(SUBTOPOLOGY_1, Map.of(10, 5, 11, 5)),
+            Map.of(SUBTOPOLOGY_2, Set.of(12, 13)),
+            Map.of(SUBTOPOLOGY_3, Set.of(7, 14, 15))
+        );
+
+        assertTrue(tuple1.containsAny(tuple5));
     }
 
     @Test
