@@ -22,7 +22,6 @@ import org.mockito.internal.util.collections.Sets;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -33,12 +32,10 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.Arrays.asList;
 import static org.apache.kafka.common.utils.Utils.mkEntry;
 import static org.apache.kafka.common.utils.Utils.mkMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -47,6 +44,12 @@ public class StickyTaskAssignorTest {
 
     public static final String NUM_STANDBY_REPLICAS_CONFIG = "num.standby.replicas";
     private final StickyTaskAssignor assignor = new StickyTaskAssignor();
+
+    @Test
+    public void testToStringReturnsName() {
+        assertEquals("sticky", assignor.name());
+        assertEquals(assignor.name(), assignor.toString());
+    }
 
     @Test
     public void shouldAssignOneActiveTaskToEachProcessWhenTaskCountSameAsProcessCount() {
@@ -59,7 +62,7 @@ public class StickyTaskAssignorTest {
                 mkMap(mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3)),
                 new HashMap<>()
             ),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         assertEquals(3, result.members().size());
@@ -132,13 +135,13 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldNotMigrateActiveTaskToOtherProcess() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Collections.singleton(0))), Collections.emptyMap());
-        AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Set.of(0))), Map.of());
+        AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
         Map<String, AssignmentMemberSpec> members = mkMap(mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
@@ -151,13 +154,13 @@ public class StickyTaskAssignorTest {
             testMember1.activeTasks().get("test-subtopology").size() + testMember2.activeTasks().get("test-subtopology").size());
 
         // flip the previous active tasks assignment around.
-        memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Collections.singleton(2))), Collections.emptyMap());
+        memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Set.of(2))), Map.of());
         members = mkMap(mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3));
 
         result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         testMember2 = result.members().get("member2");
@@ -172,15 +175,15 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldMigrateActiveTasksToNewProcessWithoutChangingAllAssignments() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 2))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 2))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
         final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
@@ -208,7 +211,7 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
@@ -227,7 +230,7 @@ public class StickyTaskAssignorTest {
         final Map<String, Set<Integer>> activeTasks = mkMap(
             mkEntry("test-subtopology1", Sets.newSet(0, 1, 2, 3, 4, 5)),
             mkEntry("test-subtopology2", Sets.newSet(0)));
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", activeTasks, Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", activeTasks, Map.of());
         final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
@@ -254,9 +257,9 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldKeepActiveTaskStickinessWhenMoreClientThanActiveTasks() {
-        AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Collections.singleton(0))), Collections.emptyMap());
-        AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(2))), Collections.emptyMap());
-        AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
+        AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Set.of(0))), Map.of());
+        AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(2))), Map.of());
+        AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
         AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4");
         AssignmentMemberSpec memberSpec5 = createAssignmentMemberSpec("process5");
         Map<String, AssignmentMemberSpec> members = mkMap(
@@ -265,21 +268,21 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
         assertNotNull(testMember1);
         assertEquals(1, testMember1.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(0), testMember1.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(0), testMember1.activeTasks().get("test-subtopology"));
         MemberAssignment testMember2 = result.members().get("member2");
         assertNotNull(testMember2);
         assertEquals(1, testMember2.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(2), testMember2.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(2), testMember2.activeTasks().get("test-subtopology"));
         MemberAssignment testMember3 = result.members().get("member3");
         assertNotNull(testMember3);
         assertEquals(1, testMember3.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(1), testMember3.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(1), testMember3.activeTasks().get("test-subtopology"));
         MemberAssignment testMember4 = result.members().get("member4");
         assertNotNull(testMember4);
         assertNull(testMember4.activeTasks().get("test-subtopology"));
@@ -289,17 +292,17 @@ public class StickyTaskAssignorTest {
 
         // change up the assignment and make sure it is still sticky
         memberSpec1 = createAssignmentMemberSpec("process1");
-        memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(0))), Collections.emptyMap());
+        memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(0))), Map.of());
         memberSpec3 = createAssignmentMemberSpec("process3");
-        memberSpec4 = createAssignmentMemberSpec("process4", mkMap(mkEntry("test-subtopology", Collections.singleton(2))), Collections.emptyMap());
-        memberSpec5 = createAssignmentMemberSpec("process5", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
+        memberSpec4 = createAssignmentMemberSpec("process4", mkMap(mkEntry("test-subtopology", Set.of(2))), Map.of());
+        memberSpec5 = createAssignmentMemberSpec("process5", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
         members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2),
             mkEntry("member3", memberSpec3), mkEntry("member4", memberSpec4), mkEntry("member5", memberSpec5));
 
         result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         testMember1 = result.members().get("member1");
@@ -308,113 +311,113 @@ public class StickyTaskAssignorTest {
         testMember2 = result.members().get("member2");
         assertNotNull(testMember2);
         assertEquals(1, testMember2.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(0), testMember2.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(0), testMember2.activeTasks().get("test-subtopology"));
         testMember3 = result.members().get("member3");
         assertNotNull(testMember3);
         assertNull(testMember3.activeTasks().get("test-subtopology"));
         testMember4 = result.members().get("member4");
         assertNotNull(testMember4);
         assertEquals(1, testMember4.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(2), testMember4.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(2), testMember4.activeTasks().get("test-subtopology"));
         testMember5 = result.members().get("member5");
         assertNotNull(testMember5);
         assertEquals(1, testMember5.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(1), testMember5.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(1), testMember5.activeTasks().get("test-subtopology"));
     }
 
     @Test
     public void shouldAssignTasksToClientWithPreviousStandbyTasks() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", Collections.emptyMap(), mkMap(mkEntry("test-subtopology", Collections.singleton(2))));
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", Collections.emptyMap(), mkMap(mkEntry("test-subtopology", Collections.singleton(1))));
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", Collections.emptyMap(), mkMap(mkEntry("test-subtopology", Collections.singleton(0))));
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", Map.of(), mkMap(mkEntry("test-subtopology", Set.of(2))));
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", Map.of(), mkMap(mkEntry("test-subtopology", Set.of(1))));
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", Map.of(), mkMap(mkEntry("test-subtopology", Set.of(0))));
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
         assertNotNull(testMember1);
         assertEquals(1, testMember1.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(2), testMember1.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(2), testMember1.activeTasks().get("test-subtopology"));
         MemberAssignment testMember2 = result.members().get("member2");
         assertNotNull(testMember2);
         assertEquals(1, testMember2.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(1), testMember2.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(1), testMember2.activeTasks().get("test-subtopology"));
         MemberAssignment testMember3 = result.members().get("member3");
         assertNotNull(testMember3);
         assertEquals(1, testMember3.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(0), testMember3.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(0), testMember3.activeTasks().get("test-subtopology"));
     }
 
     @Test
     public void shouldNotAssignStandbyTasksToClientWithPreviousStandbyTasksAndCurrentActiveTasks() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", Collections.emptyMap(), mkMap(mkEntry("test-subtopology", Collections.singleton(0))));
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", Collections.emptyMap(), mkMap(mkEntry("test-subtopology", Collections.singleton(1))));
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", Map.of(), mkMap(mkEntry("test-subtopology", Set.of(0))));
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", Map.of(), mkMap(mkEntry("test-subtopology", Set.of(1))));
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(2, true, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(2, true, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
         assertNotNull(testMember1);
         assertEquals(1, testMember1.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(0), testMember1.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(0), testMember1.activeTasks().get("test-subtopology"));
         assertEquals(1, testMember1.standbyTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(1), testMember1.standbyTasks().get("test-subtopology"));
+        assertEquals(Set.of(1), testMember1.standbyTasks().get("test-subtopology"));
         MemberAssignment testMember2 = result.members().get("member2");
         assertNotNull(testMember2);
         assertEquals(1, testMember2.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(1), testMember2.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(1), testMember2.activeTasks().get("test-subtopology"));
         assertEquals(1, testMember2.standbyTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(0), testMember2.standbyTasks().get("test-subtopology"));
+        assertEquals(Set.of(0), testMember2.standbyTasks().get("test-subtopology"));
     }
 
     @Test
     public void shouldAssignBasedOnCapacityWhenMultipleClientHaveStandbyTasks() {
         final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1",
-            mkMap(mkEntry("test-subtopology", Collections.singleton(0))),
-            mkMap(mkEntry("test-subtopology", Collections.singleton(1))));
+            mkMap(mkEntry("test-subtopology", Set.of(0))),
+            mkMap(mkEntry("test-subtopology", Set.of(1))));
         final AssignmentMemberSpec memberSpec21 = createAssignmentMemberSpec("process2",
-            mkMap(mkEntry("test-subtopology", Collections.singleton(2))),
-            mkMap(mkEntry("test-subtopology", Collections.singleton(1))));
+            mkMap(mkEntry("test-subtopology", Set.of(2))),
+            mkMap(mkEntry("test-subtopology", Set.of(1))));
         final AssignmentMemberSpec memberSpec22 = createAssignmentMemberSpec("process2",
-            Collections.emptyMap(), Collections.emptyMap());
+            Map.of(), Map.of());
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1),
             mkEntry("member2_1", memberSpec21), mkEntry("member2_2", memberSpec22));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         MemberAssignment testMember1 = result.members().get("member1");
         assertNotNull(testMember1);
         assertEquals(1, testMember1.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(0), testMember1.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(0), testMember1.activeTasks().get("test-subtopology"));
         MemberAssignment testMember21 = result.members().get("member2_1");
         assertNotNull(testMember21);
         assertEquals(1, testMember21.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(2), testMember21.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(2), testMember21.activeTasks().get("test-subtopology"));
         MemberAssignment testMember22 = result.members().get("member2_2");
         assertNotNull(testMember22);
         assertEquals(1, testMember22.activeTasks().get("test-subtopology").size());
-        assertEquals(Collections.singleton(1), testMember22.activeTasks().get("test-subtopology"));
+        assertEquals(Set.of(1), testMember22.activeTasks().get("test-subtopology"));
     }
 
     @Test
     public void shouldAssignStandbyTasksToDifferentClientThanCorrespondingActiveTaskIsAssignedTo() {
         final Map<String, Set<Integer>> tasks = mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 3)));
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Collections.singleton(0))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Collections.singleton(2))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4", mkMap(mkEntry("test-subtopology", Collections.singleton(3))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Set.of(0))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Set.of(2))), Map.of());
+        final AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4", mkMap(mkEntry("test-subtopology", Set.of(3))), Map.of());
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2),
             mkEntry("member3", memberSpec3), mkEntry("member4", memberSpec4));
@@ -422,7 +425,7 @@ public class StickyTaskAssignorTest {
         final GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members,
                 mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(4, true, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(4, true, List.of("test-subtopology"))
         );
 
         final List<Integer> member1TaskIds = getAllStandbyTaskIds(result, "member1");
@@ -448,9 +451,9 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldAssignMultipleReplicasOfStandbyTask() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Collections.singleton(0))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Collections.singleton(1))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Collections.singleton(2))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Set.of(0))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Set.of(1))), Map.of());
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Set.of(2))), Map.of());
         Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2),
             mkEntry("member3", memberSpec3));
@@ -458,7 +461,7 @@ public class StickyTaskAssignorTest {
         final GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members,
                 mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "2"))),
-            new TopologyDescriberImpl(3, true, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, true, List.of("test-subtopology"))
         );
 
         assertEquals(Sets.newSet(1, 2), new HashSet<>(getAllStandbyTaskIds(result, "member1")));
@@ -475,7 +478,7 @@ public class StickyTaskAssignorTest {
         final GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members,
                 mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(1, true, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(1, true, List.of("test-subtopology"))
         );
 
         assertTrue(getAllStandbyTasks(result, "member1").isEmpty());
@@ -493,7 +496,7 @@ public class StickyTaskAssignorTest {
         final GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members,
                 mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(3, true, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, true, List.of("test-subtopology"))
         );
 
         assertEquals(Sets.newSet(0, 1, 2), new HashSet<>(getAllActiveTaskIds(result)));
@@ -513,7 +516,7 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         assertEquals(1, getAllActiveTaskIds(result, "member1_1", "member1_2", "member1_3").size());
@@ -535,7 +538,7 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         assertEquals(3, getAllActiveTaskIds(result, "member1", "member2", "member3", "member4", "member5", "member6").size());
@@ -557,7 +560,7 @@ public class StickyTaskAssignorTest {
         final GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members,
                 mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(3, true, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, true, List.of("test-subtopology"))
         );
 
         for (String memberId : result.members().keySet()) {
@@ -583,88 +586,8 @@ public class StickyTaskAssignorTest {
     }
 
     @Test
-    public void shouldNotHaveSameAssignmentOnAnyTwoHosts() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1");
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
-        final AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4");
-        final List<String> allMemberIds = asList("member1", "member2", "member3", "member4");
-        Map<String, AssignmentMemberSpec> members = mkMap(
-            mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3), mkEntry("member4", memberSpec4));
-
-        final GroupAssignment result = assignor.assign(
-            new GroupSpecImpl(members,
-                mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(4, true, Collections.singletonList("test-subtopology"))
-        );
-
-        for (final String memberId : allMemberIds) {
-            final List<Integer> taskIds = getAllTaskIds(result, memberId);
-            for (final String otherMemberId : allMemberIds) {
-                if (!memberId.equals(otherMemberId)) {
-                    assertNotEquals(taskIds, getAllTaskIds(result, otherMemberId));
-                }
-            }
-        }
-    }
-
-    @Test
-    public void shouldNotHaveSameAssignmentOnAnyTwoHostsWhenThereArePreviousActiveTasks() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(1, 2))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(3))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Sets.newSet(0))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4");
-        final List<String> allMemberIds = asList("member1", "member2", "member3", "member4");
-        Map<String, AssignmentMemberSpec> members = mkMap(
-            mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3), mkEntry("member4", memberSpec4));
-
-        final GroupAssignment result = assignor.assign(
-            new GroupSpecImpl(members,
-                mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(4, true, Collections.singletonList("test-subtopology"))
-        );
-
-        for (final String memberId : allMemberIds) {
-            final List<Integer> taskIds = getAllTaskIds(result, memberId);
-            for (final String otherMemberId : allMemberIds) {
-                if (!memberId.equals(otherMemberId)) {
-                    assertNotEquals(taskIds, getAllTaskIds(result, otherMemberId));
-                }
-            }
-        }
-    }
-
-    @Test
-    public void shouldNotHaveSameAssignmentOnAnyTwoHostsWhenThereArePreviousStandbyTasks() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1",
-            mkMap(mkEntry("test-subtopology", Sets.newSet(1, 2))), mkMap(mkEntry("test-subtopology", Sets.newSet(3, 0))));
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2",
-            mkMap(mkEntry("test-subtopology", Sets.newSet(3, 0))), mkMap(mkEntry("test-subtopology", Sets.newSet(1, 2))));
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
-        final AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4");
-        final List<String> allMemberIds = asList("member1", "member2", "member3", "member4");
-        Map<String, AssignmentMemberSpec> members = mkMap(
-            mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3), mkEntry("member4", memberSpec4));
-
-        final GroupAssignment result = assignor.assign(
-            new GroupSpecImpl(members,
-                mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
-            new TopologyDescriberImpl(4, true, Collections.singletonList("test-subtopology"))
-        );
-
-        for (final String memberId : allMemberIds) {
-            final List<Integer> taskIds = getAllTaskIds(result, memberId);
-            for (final String otherMemberId : allMemberIds) {
-                if (!memberId.equals(otherMemberId)) {
-                    assertNotEquals(taskIds, getAllTaskIds(result, otherMemberId));
-                }
-            }
-        }
-    }
-
-    @Test
     public void shouldReBalanceTasksAcrossAllClientsWhenCapacityAndTaskCountTheSame() {
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 3))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 3))), Map.of());
         final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1");
         final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
         final AssignmentMemberSpec memberSpec4 = createAssignmentMemberSpec("process4");
@@ -673,7 +596,7 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(4, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(4, false, List.of("test-subtopology"))
         );
 
         assertEquals(1, getAllActiveTaskCount(result, "member1"));
@@ -684,7 +607,7 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldReBalanceTasksAcrossClientsWhenCapacityLessThanTaskCount() {
-        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 3))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 3))), Map.of());
         final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1");
         final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
         Map<String, AssignmentMemberSpec> members = mkMap(
@@ -692,7 +615,7 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(4, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(4, false, List.of("test-subtopology"))
         );
 
         assertEquals(1, getAllActiveTaskCount(result, "member1"));
@@ -702,7 +625,7 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldRebalanceTasksToClientsBasedOnCapacity() {
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 3, 2))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 3, 2))), Map.of());
         final AssignmentMemberSpec memberSpec31 = createAssignmentMemberSpec("process3");
         final AssignmentMemberSpec memberSpec32 = createAssignmentMemberSpec("process3");
         Map<String, AssignmentMemberSpec> members = mkMap(
@@ -710,7 +633,7 @@ public class StickyTaskAssignorTest {
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(3, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(3, false, List.of("test-subtopology"))
         );
 
         assertEquals(1, getAllActiveTaskCount(result, "member2"));
@@ -721,15 +644,15 @@ public class StickyTaskAssignorTest {
     public void shouldMoveMinimalNumberOfTasksWhenPreviouslyAboveCapacityAndNewClientAdded() {
         final Set<Integer> p1PrevTasks = Sets.newSet(0, 2);
         final Set<Integer> p2PrevTasks = Sets.newSet(1, 3);
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", p1PrevTasks)), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", p2PrevTasks)), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", p1PrevTasks)), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", p2PrevTasks)), Map.of());
         final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(4, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(4, false, List.of("test-subtopology"))
         );
 
         assertEquals(1, getAllActiveTaskCount(result, "member3"));
@@ -743,14 +666,14 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldNotMoveAnyTasksWhenNewTasksAdded() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(2, 3))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(2, 3))), Map.of());
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(6, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(6, false, List.of("test-subtopology"))
         );
 
         final List<Integer> mem1Tasks = getAllActiveTaskIds(result, "member1");
@@ -763,15 +686,15 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldAssignNewTasksToNewClientWhenPreviousTasksAssignedToOldClients() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(2, 1))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 3))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(2, 1))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 3))), Map.of());
         final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(6, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(6, false, List.of("test-subtopology"))
         );
 
         final List<Integer> mem1Tasks = getAllActiveTaskIds(result, "member1");
@@ -797,7 +720,7 @@ public class StickyTaskAssignorTest {
             mkMap(mkEntry("test-subtopology2", Sets.newSet(0, 1, 3))),
             mkMap(mkEntry("test-subtopology0", Sets.newSet(2)), mkEntry("test-subtopology1", Sets.newSet(2))));
         final AssignmentMemberSpec newMemberSpec = createAssignmentMemberSpec("process4",
-            Collections.emptyMap(),
+            Map.of(),
             mkMap(mkEntry("test-subtopology0", Sets.newSet(0, 1, 2, 3)), mkEntry("test-subtopology1", Sets.newSet(0, 1, 2, 3)), mkEntry("test-subtopology2", Sets.newSet(0, 1, 2, 3))));
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3), mkEntry("newMember", newMemberSpec));
@@ -826,10 +749,10 @@ public class StickyTaskAssignorTest {
             mkMap(mkEntry("test-subtopology0", Sets.newSet(0)), mkEntry("test-subtopology1", Sets.newSet(1)), mkEntry("test-subtopology2", Sets.newSet(2))),
             mkMap(mkEntry("test-subtopology0", Sets.newSet(1, 2, 3)), mkEntry("test-subtopology1", Sets.newSet(0, 2, 3)), mkEntry("test-subtopology2", Sets.newSet(0, 1, 3))));
         final AssignmentMemberSpec bounce1 = createAssignmentMemberSpec("bounce1",
-            Collections.emptyMap(),
+            Map.of(),
             mkMap(mkEntry("test-subtopology2", Sets.newSet(0, 1, 3))));
         final AssignmentMemberSpec bounce2 = createAssignmentMemberSpec("bounce2",
-            Collections.emptyMap(),
+            Map.of(),
             mkMap(mkEntry("test-subtopology0", Sets.newSet(2, 3)), mkEntry("test-subtopology1", Sets.newSet(0))));
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("bounce_member1", bounce1), mkEntry("bounce_member2", bounce2));
@@ -851,14 +774,14 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldAssignTasksToNewClient() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(1, 2))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(1, 2))), Map.of());
         final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(2, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(2, false, List.of("test-subtopology"))
         );
 
         assertEquals(1, getAllActiveTaskCount(result, "member1"));
@@ -866,15 +789,15 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldAssignTasksToNewClientWithoutFlippingAssignmentBetweenExistingClients() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(3, 4, 5))), Collections.emptyMap());
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", mkMap(mkEntry("test-subtopology", Sets.newSet(3, 4, 5))), Map.of());
         final AssignmentMemberSpec newMemberSpec = createAssignmentMemberSpec("process3");
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("newMember", newMemberSpec));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(6, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(6, false, List.of("test-subtopology"))
         );
 
         final List<Integer> mem1Tasks = getAllActiveTaskIds(result, "member1");
@@ -892,15 +815,15 @@ public class StickyTaskAssignorTest {
 
     @Test
     public void shouldAssignTasksToNewClientWithoutFlippingAssignmentBetweenExistingAndBouncedClients() {
-        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 6))), Collections.emptyMap());
-        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", Collections.emptyMap(), mkMap(mkEntry("test-subtopology", Sets.newSet(3, 4, 5))));
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1, 2, 6))), Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2", Map.of(), mkMap(mkEntry("test-subtopology", Sets.newSet(3, 4, 5))));
         final AssignmentMemberSpec newMemberSpec = createAssignmentMemberSpec("newProcess");
         final Map<String, AssignmentMemberSpec> members = mkMap(
             mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("newMember", newMemberSpec));
 
         GroupAssignment result = assignor.assign(
             new GroupSpecImpl(members, new HashMap<>()),
-            new TopologyDescriberImpl(7, false, Collections.singletonList("test-subtopology"))
+            new TopologyDescriberImpl(7, false, List.of("test-subtopology"))
         );
 
         final List<Integer> mem1Tasks = getAllActiveTaskIds(result, "member1");
@@ -915,6 +838,469 @@ public class StickyTaskAssignorTest {
         assertEquals(2, mem2Tasks.size());
         assertEquals(2, getAllActiveTaskIds(result, "newMember").size());
     }
+
+    @Test
+    public void shouldHandleLargeNumberOfTasksWithStandbyAssignment() {
+        final int numTasks = 100;
+        final int numClients = 5;
+        final int numStandbyReplicas = 2;
+        
+        Map<String, AssignmentMemberSpec> members = new HashMap<>();
+        for (int i = 0; i < numClients; i++) {
+            members.put("member" + i, createAssignmentMemberSpec("process" + i));
+        }
+
+        GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(numStandbyReplicas)))),
+            new TopologyDescriberImpl(numTasks, true, List.of("test-subtopology"))
+        );
+
+        // Verify all active tasks are assigned
+        Set<Integer> allActiveTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberActiveTasks = getAllActiveTaskIds(result, memberId);
+            allActiveTasks.addAll(memberActiveTasks);
+        }
+        assertEquals(numTasks, allActiveTasks.size());
+
+        // Verify standby tasks are assigned (should be numTasks * numStandbyReplicas total)
+        Set<Integer> allStandbyTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberStandbyTasks = getAllStandbyTaskIds(result, memberId);
+            allStandbyTasks.addAll(memberStandbyTasks);
+        }
+        // With 5 clients and 2 standby replicas, we should have at least some standby tasks
+        assertTrue(allStandbyTasks.size() > 0, "Should have some standby tasks assigned");
+        // Maximum possible = numTasks * min(numStandbyReplicas, numClients - 1) = 100 * 2 = 200
+        int maxPossibleStandbyTasks = numTasks * Math.min(numStandbyReplicas, numClients - 1);
+        assertTrue(allStandbyTasks.size() <= maxPossibleStandbyTasks, 
+            "Should not exceed maximum possible standby tasks: " + maxPossibleStandbyTasks);
+
+        // Verify no client has both active and standby for the same task
+        for (String memberId : result.members().keySet()) {
+            Set<Integer> memberActiveTasks = new HashSet<>(getAllActiveTaskIds(result, memberId));
+            Set<Integer> memberStandbyTasks = new HashSet<>(getAllStandbyTaskIds(result, memberId));
+            memberActiveTasks.retainAll(memberStandbyTasks);
+            assertTrue(memberActiveTasks.isEmpty(), "Client " + memberId + " has both active and standby for same task");
+        }
+
+        // Verify load distribution is reasonable
+        int minActiveTasks = Integer.MAX_VALUE;
+        int maxActiveTasks = 0;
+        for (String memberId : result.members().keySet()) {
+            int activeTaskCount = getAllActiveTaskCount(result, memberId);
+            minActiveTasks = Math.min(minActiveTasks, activeTaskCount);
+            maxActiveTasks = Math.max(maxActiveTasks, activeTaskCount);
+        }
+        // With 100 tasks and 5 clients, each should have 20 tasks
+        assertEquals(20, minActiveTasks);
+        assertEquals(20, maxActiveTasks);
+        
+        // Verify standby task distribution is reasonable
+        int minStandbyTasks = Integer.MAX_VALUE;
+        int maxStandbyTasks = 0;
+        for (String memberId : result.members().keySet()) {
+            int standbyTaskCount = getAllStandbyTaskIds(result, memberId).size();
+            minStandbyTasks = Math.min(minStandbyTasks, standbyTaskCount);
+            maxStandbyTasks = Math.max(maxStandbyTasks, standbyTaskCount);
+        }
+        // Each client should have some standby tasks, but not necessarily equal distribution
+        assertTrue(minStandbyTasks >= 0);
+        assertTrue(maxStandbyTasks > 0);
+    }
+
+    @Test
+    public void shouldHandleOddNumberOfClientsWithStandbyTasks() {
+        // Test with odd number of clients (7) and even number of tasks (14)
+        final int numTasks = 14;
+        final int numClients = 7;
+        final int numStandbyReplicas = 1;
+        
+        Map<String, AssignmentMemberSpec> members = new HashMap<>();
+        for (int i = 0; i < numClients; i++) {
+            members.put("member" + i, createAssignmentMemberSpec("process" + i));
+        }
+
+        GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(numStandbyReplicas)))),
+            new TopologyDescriberImpl(numTasks, true, List.of("test-subtopology"))
+        );
+
+        // Verify all active tasks are assigned
+        Set<Integer> allActiveTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberActiveTasks = getAllActiveTaskIds(result, memberId);
+            allActiveTasks.addAll(memberActiveTasks);
+        }
+        assertEquals(numTasks, allActiveTasks.size());
+
+        // Verify standby tasks are assigned
+        Set<Integer> allStandbyTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberStandbyTasks = getAllStandbyTaskIds(result, memberId);
+            allStandbyTasks.addAll(memberStandbyTasks);
+        }
+        assertEquals(numTasks * numStandbyReplicas, allStandbyTasks.size());
+
+        // With 14 tasks and 7 clients, each client should have 2 active tasks
+        int expectedTasksPerClient = numTasks / numClients; // 14 / 7 = 2
+        int remainder = numTasks % numClients; // 14 % 7 = 0
+        
+        int clientsWithExpectedTasks = 0;
+        int clientsWithOneMoreTask = 0;
+        for (String memberId : result.members().keySet()) {
+            int activeTaskCount = getAllActiveTaskCount(result, memberId);
+            if (activeTaskCount == expectedTasksPerClient) {
+                clientsWithExpectedTasks++;
+            } else if (activeTaskCount == expectedTasksPerClient + 1) {
+                clientsWithOneMoreTask++;
+            }
+        }
+        assertEquals(numClients - remainder, clientsWithExpectedTasks); // 7 clients should have 2 tasks
+        assertEquals(remainder, clientsWithOneMoreTask); // 0 clients should have 3 tasks
+    }
+
+    @Test
+    public void shouldHandleHighStandbyReplicaCount() {
+        // Test with high number of standby replicas (5) and limited clients (3)
+        final int numTasks = 6;
+        final int numClients = 3;
+        final int numStandbyReplicas = 5;
+        
+        Map<String, AssignmentMemberSpec> members = new HashMap<>();
+        for (int i = 0; i < numClients; i++) {
+            members.put("member" + i, createAssignmentMemberSpec("process" + i));
+        }
+
+        GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(numStandbyReplicas)))),
+            new TopologyDescriberImpl(numTasks, true, List.of("test-subtopology"))
+        );
+
+        // Verify all active tasks are assigned
+        Set<Integer> allActiveTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberActiveTasks = getAllActiveTaskIds(result, memberId);
+            allActiveTasks.addAll(memberActiveTasks);
+        }
+        assertEquals(numTasks, allActiveTasks.size());
+
+        // With only 3 clients and 5 standby replicas, not all standby replicas can be assigned
+        // since each client can only hold standby tasks for tasks it doesn't have active
+        Set<Integer> allStandbyTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberStandbyTasks = getAllStandbyTaskIds(result, memberId);
+            allStandbyTasks.addAll(memberStandbyTasks);
+        }
+        
+        // Maximum possible = numTasks * min(numStandbyReplicas, numClients - 1) = 6 * 2 = 12
+        int maxPossibleStandbyTasks = numTasks * Math.min(numStandbyReplicas, numClients - 1);
+        assertTrue(allStandbyTasks.size() <= maxPossibleStandbyTasks);
+        assertTrue(allStandbyTasks.size() > 0); // Should assign at least some standby tasks
+    }
+
+    @Test
+    public void shouldHandleLargeNumberOfSubtopologiesWithStandbyTasks() {
+        // Test with many subtopologies (10) each with different numbers of tasks
+        final int numSubtopologies = 10;
+        final int numClients = 4;
+        final int numStandbyReplicas = 1;
+        
+        List<String> subtopologies = new ArrayList<>();
+        for (int i = 0; i < numSubtopologies; i++) {
+            subtopologies.add("subtopology-" + i);
+        }
+        
+        Map<String, AssignmentMemberSpec> members = new HashMap<>();
+        for (int i = 0; i < numClients; i++) {
+            members.put("member" + i, createAssignmentMemberSpec("process" + i));
+        }
+
+        GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(numStandbyReplicas)))),
+            new TopologyDescriberImpl(5, true, subtopologies) // 5 tasks per subtopology
+        );
+
+        // Verify all subtopologies have tasks assigned
+        Set<String> subtopologiesWithTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            MemberAssignment member = result.members().get(memberId);
+            subtopologiesWithTasks.addAll(member.activeTasks().keySet());
+        }
+        assertEquals(numSubtopologies, subtopologiesWithTasks.size());
+
+        // Verify standby tasks are assigned across subtopologies
+        Set<String> subtopologiesWithStandbyTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            MemberAssignment member = result.members().get(memberId);
+            subtopologiesWithStandbyTasks.addAll(member.standbyTasks().keySet());
+        }
+        assertEquals(numSubtopologies, subtopologiesWithStandbyTasks.size());
+    }
+
+    @Test
+    public void shouldHandleEdgeCaseWithSingleClientAndMultipleStandbyReplicas() {
+        // Test edge case: single client with multiple standby replicas
+        final int numTasks = 10;
+        final int numStandbyReplicas = 3;
+        
+        Map<String, AssignmentMemberSpec> members = mkMap(
+            mkEntry("member1", createAssignmentMemberSpec("process1"))
+        );
+
+        GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(numStandbyReplicas)))),
+            new TopologyDescriberImpl(numTasks, true, List.of("test-subtopology"))
+        );
+
+        // Single client should get all active tasks
+        assertEquals(numTasks, getAllActiveTaskCount(result, "member1"));
+        
+        // No standby tasks should be assigned since there's only one client
+        // (standby tasks can't be assigned to the same client as active tasks)
+        assertTrue(getAllStandbyTaskIds(result, "member1").isEmpty());
+    }
+
+    @Test
+    public void shouldHandleEdgeCaseWithMoreStandbyReplicasThanAvailableClients() {
+        // Test edge case: more standby replicas than available clients
+        final int numTasks = 4;
+        final int numClients = 2;
+        final int numStandbyReplicas = 5; // More than available clients
+        
+        Map<String, AssignmentMemberSpec> members = new HashMap<>();
+        for (int i = 0; i < numClients; i++) {
+            members.put("member" + i, createAssignmentMemberSpec("process" + i));
+        }
+
+        GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(numStandbyReplicas)))),
+            new TopologyDescriberImpl(numTasks, true, List.of("test-subtopology"))
+        );
+
+        // Verify all active tasks are assigned
+        Set<Integer> allActiveTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberActiveTasks = getAllActiveTaskIds(result, memberId);
+            allActiveTasks.addAll(memberActiveTasks);
+        }
+        assertEquals(numTasks, allActiveTasks.size());
+
+        // With only 2 clients, maximum standby tasks per task = 1 (since each client has active tasks)
+        Set<Integer> allStandbyTasks = new HashSet<>();
+        for (String memberId : result.members().keySet()) {
+            List<Integer> memberStandbyTasks = getAllStandbyTaskIds(result, memberId);
+            allStandbyTasks.addAll(memberStandbyTasks);
+        }
+        
+        // Maximum possible = numTasks * 1 = 4
+        assertEquals(numTasks, allStandbyTasks.size());
+    }
+
+    @Test
+    public void shouldReassignTasksWhenNewNodeJoinsWithExistingActiveAndStandbyAssignments() {
+        // Initial setup: Node 1 has active tasks 0,1 and standby tasks 2,3
+        // Node 2 has active tasks 2,3 and standby tasks 0,1
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1",
+            mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1))),
+            mkMap(mkEntry("test-subtopology", Sets.newSet(2, 3))));
+
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2",
+            mkMap(mkEntry("test-subtopology", Sets.newSet(2, 3))),
+            mkMap(mkEntry("test-subtopology", Sets.newSet(0, 1))));
+
+        // Node 3 joins as new client
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
+
+        final Map<String, AssignmentMemberSpec> members = mkMap(
+            mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2), mkEntry("member3", memberSpec3));
+
+        final GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
+            new TopologyDescriberImpl(4, true, List.of("test-subtopology"))
+        );
+
+        // Verify all active tasks are assigned
+        final Set<Integer> allAssignedActiveTasks = new HashSet<>();
+        allAssignedActiveTasks.addAll(getAllActiveTaskIds(result, "member1"));
+        allAssignedActiveTasks.addAll(getAllActiveTaskIds(result, "member2"));
+        allAssignedActiveTasks.addAll(getAllActiveTaskIds(result, "member3"));
+        assertEquals(Sets.newSet(0, 1, 2, 3), allAssignedActiveTasks);
+
+        // Verify all standby tasks are assigned
+        final Set<Integer> allAssignedStandbyTasks = new HashSet<>();
+        allAssignedStandbyTasks.addAll(getAllStandbyTaskIds(result, "member1"));
+        allAssignedStandbyTasks.addAll(getAllStandbyTaskIds(result, "member2"));
+        allAssignedStandbyTasks.addAll(getAllStandbyTaskIds(result, "member3"));
+        assertEquals(Sets.newSet(0, 1, 2, 3), allAssignedStandbyTasks);
+
+        // Verify each member has 1-2 active tasks and at most 3 tasks total
+        assertTrue(getAllActiveTaskIds(result, "member1").size() >= 1 && getAllActiveTaskIds(result, "member1").size() <= 2);
+        assertTrue(getAllActiveTaskIds(result, "member1").size() + getAllStandbyTaskIds(result, "member1").size() <= 3);
+
+        assertTrue(getAllActiveTaskIds(result, "member2").size() >= 1 && getAllActiveTaskIds(result, "member2").size() <= 2);
+        assertTrue(getAllActiveTaskIds(result, "member2").size() + getAllStandbyTaskIds(result, "member2").size() <= 3);
+
+        assertTrue(getAllActiveTaskIds(result, "member3").size() >= 1 && getAllActiveTaskIds(result, "member3").size() <= 2);
+        assertTrue(getAllActiveTaskIds(result, "member3").size() + getAllStandbyTaskIds(result, "member3").size() <= 3);
+    }
+
+    @Test
+    public void shouldRangeAssignTasksWhenScalingUp() {
+        // Two clients, the second one is new
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1",
+            Map.of("test-subtopology1", Set.of(0, 1), "test-subtopology2", Set.of(0, 1)),
+            Map.of());
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
+        final Map<String, AssignmentMemberSpec> members = mkMap(
+            mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
+
+        // Two subtopologies with 2 tasks each (4 tasks total) with standby replicas enabled
+        final GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(1)))),
+            new TopologyDescriberImpl(2, true, Arrays.asList("test-subtopology1", "test-subtopology2"))
+        );
+
+        // Each client should get one task from each subtopology
+        final MemberAssignment testMember1 = result.members().get("member1");
+        assertNotNull(testMember1);
+        assertEquals(1, testMember1.activeTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember1.activeTasks().get("test-subtopology2").size());
+        
+        final MemberAssignment testMember2 = result.members().get("member2");
+        assertNotNull(testMember2);
+        assertEquals(1, testMember2.activeTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember2.activeTasks().get("test-subtopology2").size());
+        
+        // Verify all tasks are assigned exactly once
+        final Set<Integer> allSubtopology1Tasks = new HashSet<>();
+        allSubtopology1Tasks.addAll(testMember1.activeTasks().get("test-subtopology1"));
+        allSubtopology1Tasks.addAll(testMember2.activeTasks().get("test-subtopology1"));
+        assertEquals(Sets.newSet(0, 1), allSubtopology1Tasks);
+        
+        final Set<Integer> allSubtopology2Tasks = new HashSet<>();
+        allSubtopology2Tasks.addAll(testMember1.activeTasks().get("test-subtopology2"));
+        allSubtopology2Tasks.addAll(testMember2.activeTasks().get("test-subtopology2"));
+        assertEquals(Sets.newSet(0, 1), allSubtopology2Tasks);
+
+        // Each client should get one task from each subtopology
+        assertNotNull(testMember1);
+        assertEquals(1, testMember1.standbyTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember1.standbyTasks().get("test-subtopology2").size());
+
+        assertNotNull(testMember2);
+        assertEquals(1, testMember2.standbyTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember2.standbyTasks().get("test-subtopology2").size());
+    }
+
+    @Test
+    public void shouldRangeAssignTasksWhenStartingEmpty() {
+        // Two clients starting empty (no previous tasks)
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1");
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2");
+        final Map<String, AssignmentMemberSpec> members = mkMap(
+            mkEntry("member1", memberSpec1), mkEntry("member2", memberSpec2));
+
+        // Two subtopologies with 2 tasks each (4 tasks total) with standby replicas enabled
+        final GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, String.valueOf(1)))),
+            new TopologyDescriberImpl(2, true, Arrays.asList("test-subtopology1", "test-subtopology2"))
+        );
+
+        // Each client should get one task from each subtopology
+        final MemberAssignment testMember1 = result.members().get("member1");
+        assertNotNull(testMember1);
+        assertEquals(1, testMember1.activeTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember1.activeTasks().get("test-subtopology2").size());
+
+        final MemberAssignment testMember2 = result.members().get("member2");
+        assertNotNull(testMember2);
+        assertEquals(1, testMember2.activeTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember2.activeTasks().get("test-subtopology2").size());
+
+        // Verify all tasks are assigned exactly once
+        final Set<Integer> allSubtopology1Tasks = new HashSet<>();
+        allSubtopology1Tasks.addAll(testMember1.activeTasks().get("test-subtopology1"));
+        allSubtopology1Tasks.addAll(testMember2.activeTasks().get("test-subtopology1"));
+        assertEquals(Sets.newSet(0, 1), allSubtopology1Tasks);
+
+        final Set<Integer> allSubtopology2Tasks = new HashSet<>();
+        allSubtopology2Tasks.addAll(testMember1.activeTasks().get("test-subtopology2"));
+        allSubtopology2Tasks.addAll(testMember2.activeTasks().get("test-subtopology2"));
+        assertEquals(Sets.newSet(0, 1), allSubtopology2Tasks);
+
+        // Each client should get one task from each subtopology
+        assertNotNull(testMember1);
+        assertEquals(1, testMember1.standbyTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember1.standbyTasks().get("test-subtopology2").size());
+
+        assertNotNull(testMember2);
+        assertEquals(1, testMember2.standbyTasks().get("test-subtopology1").size());
+        assertEquals(1, testMember2.standbyTasks().get("test-subtopology2").size());
+    }
+
+    @Test
+    public void shouldAssignStandbyTaskToPreviousOwnerBasedOnBelowQuotaCondition() {
+        // This test demonstrates the change from "load-balanced" to "below-quota" condition for standby assignment.
+        // We create a scenario where:
+        // - Process1 previously owned standby task 1 and currently has 1 active task (task 0)
+        // - Process2 currently has 1 active task (task 1) 
+        // - Process3 has no previous tasks (least loaded after assignment)
+        // 
+        // Under the old "load-balanced" algorithm: Process1 might not get standby task 1 because 
+        // Process3 could be considered least loaded.
+        //
+        // Under the new "below-quota" algorithm: Process1 gets standby task 1 because 
+        // it previously owned it AND is below quota.
+
+        // Set up previous task assignments:
+        // Process1: active=[0], standby=[1] (previously had both active and standby tasks)
+        // Process2: active=[1] (had the active task that process1 had as standby)
+        // Process3: no previous tasks
+        final AssignmentMemberSpec memberSpec1 = createAssignmentMemberSpec("process1", 
+            mkMap(mkEntry("test-subtopology", Sets.newSet(0))), 
+            mkMap(mkEntry("test-subtopology", Sets.newSet(1))));
+        final AssignmentMemberSpec memberSpec2 = createAssignmentMemberSpec("process2",
+            mkMap(mkEntry("test-subtopology", Sets.newSet(1))), 
+            Map.of());
+        final AssignmentMemberSpec memberSpec3 = createAssignmentMemberSpec("process3");
+
+        final Map<String, AssignmentMemberSpec> members = mkMap(
+            mkEntry("member1", memberSpec1), 
+            mkEntry("member2", memberSpec2), 
+            mkEntry("member3", memberSpec3));
+
+        // We have 2 active tasks + 1 standby replica = 4 total tasks
+        // Quota per process = 4 tasks / 3 processes = 1.33 -> 2 tasks per process
+        final GroupAssignment result = assignor.assign(
+            new GroupSpecImpl(members, mkMap(mkEntry(NUM_STANDBY_REPLICAS_CONFIG, "1"))),
+            new TopologyDescriberImpl(2, true, List.of("test-subtopology"))
+        );
+
+        // Verify that process1 gets the standby task 1 that it previously owned
+        // This should work under the new "below-quota" algorithm since process1 has only 1 active task
+        // which is below the quota of 2 tasks per process
+        final MemberAssignment member1 = result.members().get("member1");
+        assertNotNull(member1);
+        
+        // Member1 should retain its active task 0
+        assertTrue(member1.activeTasks().get("test-subtopology").contains(0));
+        
+        // Member1 should get standby task 1 because it previously owned it and is below quota
+        assertNotNull(member1.standbyTasks().get("test-subtopology"), "Member1 should have standby tasks assigned");
+        assertTrue(member1.standbyTasks().get("test-subtopology").contains(1), 
+            "Member1 should have standby task 1, but has: " + member1.standbyTasks().get("test-subtopology"));
+        
+        // Verify that member1 doesn't have active task 1 (standby can't be same as active)
+        assertFalse(member1.activeTasks().get("test-subtopology").contains(1));
+        
+        // Verify the process1's total task count is at or below quota
+        int member1ActiveCount = member1.activeTasks().get("test-subtopology").size();
+        int member1StandbyCount = member1.standbyTasks().get("test-subtopology").size();
+        int member1TotalTasks = member1ActiveCount + member1StandbyCount;
+        assertTrue(member1TotalTasks <= 2, "Member1 should have <= 2 total tasks (quota), but has " + member1TotalTasks);
+    }
+
 
     private int getAllActiveTaskCount(GroupAssignment result, String... memberIds) {
         int size = 0;
@@ -1021,13 +1407,6 @@ public class StickyTaskAssignorTest {
         return res;
     }
 
-    private List<Integer> getAllTaskIds(GroupAssignment result, String... memberIds) {
-        List<Integer> res = new ArrayList<>();
-        res.addAll(getAllActiveTaskIds(result, memberIds));
-        res.addAll(getAllStandbyTaskIds(result, memberIds));
-        return res;
-    }
-
     private Map<String, Set<Integer>> mergeAllStandbyTasks(GroupAssignment result, String... memberIds) {
         Map<String, Set<Integer>> res = new HashMap<>();
         for (String memberId : memberIds) {
@@ -1054,13 +1433,13 @@ public class StickyTaskAssignorTest {
         return new AssignmentMemberSpec(
             Optional.empty(),
             Optional.empty(),
-            Collections.emptyMap(),
-            Collections.emptyMap(),
-            Collections.emptyMap(),
+            Map.of(),
+            Map.of(),
+            Map.of(),
             processId,
-            Collections.emptyMap(),
-            Collections.emptyMap(),
-            Collections.emptyMap());
+            Map.of(),
+            Map.of(),
+            Map.of());
     }
 
     private AssignmentMemberSpec createAssignmentMemberSpec(final String processId, final Map<String, Set<Integer>> prevActiveTasks,
@@ -1070,28 +1449,14 @@ public class StickyTaskAssignorTest {
             Optional.empty(),
             prevActiveTasks,
             prevStandbyTasks,
-            Collections.emptyMap(),
+            Map.of(),
             processId,
-            Collections.emptyMap(),
-            Collections.emptyMap(),
-            Collections.emptyMap());
+            Map.of(),
+            Map.of(),
+            Map.of());
     }
 
-    static class TopologyDescriberImpl implements TopologyDescriber {
-        final int numTasks;
-        final boolean isStateful;
-        final List<String> subtopologies;
-
-        TopologyDescriberImpl(int numTasks, boolean isStateful, List<String> subtopologies) {
-            this.numTasks = numTasks;
-            this.isStateful = isStateful;
-            this.subtopologies = subtopologies;
-        }
-
-        @Override
-        public List<String> subtopologies() {
-            return subtopologies;
-        }
+    record TopologyDescriberImpl(int numTasks, boolean isStateful, List<String> subtopologies) implements TopologyDescriber {
 
         @Override
         public int maxNumInputPartitions(String subtopologyId) throws NoSuchElementException {
