@@ -21,10 +21,13 @@ import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.errors.CoordinatorNotAvailableException;
 import org.apache.kafka.common.internals.Topic;
 import org.apache.kafka.common.message.DeleteShareGroupStateRequestData;
 import org.apache.kafka.common.message.DeleteShareGroupStateResponseData;
+import org.apache.kafka.common.message.InitializeShareGroupStateRequestData;
+import org.apache.kafka.common.message.InitializeShareGroupStateResponseData;
 import org.apache.kafka.common.message.ReadShareGroupStateRequestData;
 import org.apache.kafka.common.message.ReadShareGroupStateResponseData;
 import org.apache.kafka.common.message.ReadShareGroupStateSummaryRequestData;
@@ -34,6 +37,7 @@ import org.apache.kafka.common.message.WriteShareGroupStateResponseData;
 import org.apache.kafka.common.metrics.Metrics;
 import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.utils.BufferSupplier;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.common.utils.Utils;
@@ -41,6 +45,9 @@ import org.apache.kafka.coordinator.common.runtime.CoordinatorRecord;
 import org.apache.kafka.coordinator.common.runtime.CoordinatorRuntime;
 import org.apache.kafka.coordinator.common.runtime.PartitionWriter;
 import org.apache.kafka.coordinator.share.metrics.ShareCoordinatorMetrics;
+import org.apache.kafka.image.MetadataDelta;
+import org.apache.kafka.image.MetadataImage;
+import org.apache.kafka.server.common.ShareVersion;
 import org.apache.kafka.server.share.SharePartitionKey;
 import org.apache.kafka.server.util.FutureUtils;
 import org.apache.kafka.server.util.MockTime;
@@ -48,13 +55,13 @@ import org.apache.kafka.server.util.timer.MockTimer;
 import org.apache.kafka.server.util.timer.Timer;
 
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 
-import java.time.Duration;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -62,24 +69,29 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
 import static org.apache.kafka.coordinator.common.runtime.TestUtil.requestContext;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyShort;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+@SuppressWarnings("ClassFanOutComplexity")
 class ShareCoordinatorServiceTest {
 
     @SuppressWarnings("unchecked")
     private CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> mockRuntime() {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mock(CoordinatorRuntime.class);
-        when(runtime.activeTopicPartitions())
+        when(runtime.activeCoordinators())
             .thenReturn(List.of(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)));
         return runtime;
     }
@@ -94,7 +106,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             new MockTimer(),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -117,7 +130,8 @@ class ShareCoordinatorServiceTest {
             coordinatorMetrics,
             time,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -131,13 +145,14 @@ class ShareCoordinatorServiceTest {
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition1)
                                 .setStartOffset(0)
+                                .setDeliveryCompleteCount(11)
                                 .setStateEpoch(1)
                                 .setLeaderEpoch(1)
                                 .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
@@ -153,6 +168,7 @@ class ShareCoordinatorServiceTest {
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition2)
                                 .setStartOffset(0)
+                                .setDeliveryCompleteCount(11)
                                 .setStateEpoch(1)
                                 .setLeaderEpoch(1)
                                 .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
@@ -184,7 +200,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-share-group-state"),
             eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
-            eq(Duration.ofMillis(5000)),
             any()
         ))
             .thenReturn(CompletableFuture.completedFuture(response1))
@@ -197,7 +212,7 @@ class ShareCoordinatorServiceTest {
 
         HashSet<WriteShareGroupStateResponseData.WriteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = Set.of(
             new WriteShareGroupStateResponseData.WriteStateResult()
                 .setTopicId(topicId2)
                 .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
@@ -205,15 +220,15 @@ class ShareCoordinatorServiceTest {
             new WriteShareGroupStateResponseData.WriteStateResult()
                 .setTopicId(topicId1)
                 .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
-                    .setPartition(partition1)))));
+                    .setPartition(partition1))));
         assertEquals(expectedResult, result);
         verify(time, times(2)).hiResClockMs();
-        Set<MetricName> expectedMetrics = new HashSet<>(Arrays.asList(
+        Set<MetricName> expectedMetrics = Set.of(
             metrics.metricName("write-latency-avg", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-latency-max", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-rate", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-total", ShareCoordinatorMetrics.METRICS_GROUP)
-        ));
+        );
         expectedMetrics.forEach(metric -> assertTrue(metrics.metrics().containsKey(metric)));
     }
 
@@ -227,7 +242,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -241,7 +257,7 @@ class ShareCoordinatorServiceTest {
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new ReadShareGroupStateRequestData.ReadStateData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
@@ -281,7 +297,7 @@ class ShareCoordinatorServiceTest {
                 .setErrorCode(Errors.NONE.code())
                 .setStateEpoch(1)
                 .setStartOffset(0)
-                .setStateBatches(Arrays.asList(
+                .setStateBatches(List.of(
                     new ReadShareGroupStateResponseData.StateBatch()
                         .setFirstOffset(0)
                         .setLastOffset(10)
@@ -298,7 +314,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("read-update-leader-epoch-state"),
             eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
-            any(),
             any()
         ))
             .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateResponseData()
@@ -313,9 +328,9 @@ class ShareCoordinatorServiceTest {
 
         HashSet<ReadShareGroupStateResponseData.ReadStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = Set.of(
             topicData1,
-            topicData2));
+            topicData2);
         assertEquals(expectedResult, result);
     }
 
@@ -329,7 +344,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -343,23 +359,20 @@ class ShareCoordinatorServiceTest {
 
         ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
-                    new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
-                        .setTopicId(topicId1)
-                        .setPartitions(List.of(
-                            new ReadShareGroupStateSummaryRequestData.PartitionData()
-                                .setPartition(partition1)
-                                .setLeaderEpoch(1)
-                        )),
-                    new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
-                        .setTopicId(topicId2)
-                        .setPartitions(List.of(
-                            new ReadShareGroupStateSummaryRequestData.PartitionData()
-                                .setPartition(partition2)
-                                .setLeaderEpoch(1)
-                        ))
-                )
-            );
+            .setTopics(List.of(
+                new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new ReadShareGroupStateSummaryRequestData.PartitionData()
+                            .setPartition(partition1)
+                            .setLeaderEpoch(1))),
+                new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new ReadShareGroupStateSummaryRequestData.PartitionData()
+                            .setPartition(partition2)
+                            .setLeaderEpoch(1)))
+            ));
 
         ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult topicData1 = new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
             .setTopicId(topicId1)
@@ -382,13 +395,12 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("read-share-group-state-summary"),
             eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
-            any(),
-            any()
-        ))
-            .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateSummaryResponseData()
-                .setResults(List.of(topicData1))))
-            .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateSummaryResponseData()
-                .setResults(List.of(topicData2))));
+            any())
+        ).thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateSummaryResponseData()
+            .setResults(List.of(topicData1)))
+        ).thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateSummaryResponseData()
+            .setResults(List.of(topicData2)))
+        );
 
         CompletableFuture<ReadShareGroupStateSummaryResponseData> future = service.readStateSummary(
             requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
@@ -397,9 +409,9 @@ class ShareCoordinatorServiceTest {
 
         HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> expectedResult = Set.of(
             topicData1,
-            topicData2));
+            topicData2);
         assertEquals(expectedResult, result);
     }
 
@@ -416,7 +428,8 @@ class ShareCoordinatorServiceTest {
             coordinatorMetrics,
             time,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -430,21 +443,18 @@ class ShareCoordinatorServiceTest {
 
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
-                    new DeleteShareGroupStateRequestData.DeleteStateData()
-                        .setTopicId(topicId1)
-                        .setPartitions(List.of(
-                            new DeleteShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition1)
-                        )),
-                    new DeleteShareGroupStateRequestData.DeleteStateData()
-                        .setTopicId(topicId2)
-                        .setPartitions(List.of(
-                            new DeleteShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition2)
-                        ))
-                )
-            );
+            .setTopics(List.of(
+                new DeleteShareGroupStateRequestData.DeleteStateData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new DeleteShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition1))),
+                new DeleteShareGroupStateRequestData.DeleteStateData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new DeleteShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition2)))
+            ));
 
         DeleteShareGroupStateResponseData response1 = new DeleteShareGroupStateResponseData()
             .setResults(List.of(
@@ -465,11 +475,8 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("delete-share-group-state"),
             eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
-            eq(Duration.ofMillis(5000)),
             any()
-        ))
-            .thenReturn(CompletableFuture.completedFuture(response1))
-            .thenReturn(CompletableFuture.completedFuture(response2));
+        )).thenReturn(CompletableFuture.completedFuture(response1)).thenReturn(CompletableFuture.completedFuture(response2));
 
         CompletableFuture<DeleteShareGroupStateResponseData> future = service.deleteState(
             requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
@@ -478,7 +485,7 @@ class ShareCoordinatorServiceTest {
 
         HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<DeleteShareGroupStateResponseData.DeleteStateResult> expectedResult = Set.of(
             new DeleteShareGroupStateResponseData.DeleteStateResult()
                 .setTopicId(topicId2)
                 .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
@@ -486,7 +493,92 @@ class ShareCoordinatorServiceTest {
             new DeleteShareGroupStateResponseData.DeleteStateResult()
                 .setTopicId(topicId1)
                 .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
-                    .setPartition(partition1)))));
+                    .setPartition(partition1))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testInitializeStateSuccess() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        Metrics metrics = new Metrics();
+        ShareCoordinatorMetrics coordinatorMetrics = new ShareCoordinatorMetrics(metrics);
+        Time time = mock(Time.class);
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            coordinatorMetrics,
+            time,
+            mock(Timer.class),
+            mock(PartitionWriter.class),
+            () -> true
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition1)
+                            .setStartOffset(0)
+                            .setStateEpoch(1))),
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition2)
+                            .setStartOffset(5)
+                            .setStateEpoch(1)))
+            ));
+
+        InitializeShareGroupStateResponseData response1 = new InitializeShareGroupStateResponseData().setResults(List.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)))
+        ));
+
+        InitializeShareGroupStateResponseData response2 = new InitializeShareGroupStateResponseData().setResults(List.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)))
+        ));
+
+        when(runtime.scheduleWriteOperation(
+            eq("initialize-share-group-state"),
+            eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
+            any())).thenReturn(CompletableFuture.completedFuture(response1)).thenReturn(CompletableFuture.completedFuture(response2)
+        );
+
+        CompletableFuture<InitializeShareGroupStateResponseData> future = service.initializeState(
+            requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<InitializeShareGroupStateResponseData.InitializeStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        Set<InitializeShareGroupStateResponseData.InitializeStateResult> expectedResult = Set.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2))),
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)))
+        );
         assertEquals(expectedResult, result);
     }
 
@@ -500,7 +592,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -547,7 +640,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -594,7 +688,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -641,7 +736,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -679,6 +775,54 @@ class ShareCoordinatorServiceTest {
     }
 
     @Test
+    public void testInitializeStateValidationError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class),
+            () -> true
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        // 1. Empty topicsData
+        assertEquals(new InitializeShareGroupStateResponseData(),
+            service.initializeState(
+                requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(groupId)
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 2. Empty partitionsData
+        assertEquals(new InitializeShareGroupStateResponseData(),
+            service.initializeState(
+                requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(groupId).setTopics(List.of(
+                    new InitializeShareGroupStateRequestData.InitializeStateData().setTopicId(topicId)))
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 3. Invalid groupId
+        assertEquals(new InitializeShareGroupStateResponseData(),
+            service.initializeState(
+                requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(null).setTopics(List.of(
+                    new InitializeShareGroupStateRequestData.InitializeStateData().setTopicId(topicId).setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData().setPartition(partition)))))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
     public void testWriteStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
@@ -688,7 +832,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         String groupId = "group1";
@@ -700,13 +845,14 @@ class ShareCoordinatorServiceTest {
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition1)
                                 .setStartOffset(0)
+                                .setDeliveryCompleteCount(11)
                                 .setStateEpoch(1)
                                 .setLeaderEpoch(1)
                                 .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
@@ -722,6 +868,7 @@ class ShareCoordinatorServiceTest {
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition2)
                                 .setStartOffset(0)
+                                .setDeliveryCompleteCount(11)
                                 .setStateEpoch(1)
                                 .setLeaderEpoch(1)
                                 .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
@@ -741,7 +888,7 @@ class ShareCoordinatorServiceTest {
 
         HashSet<WriteShareGroupStateResponseData.WriteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = Set.of(
             new WriteShareGroupStateResponseData.WriteStateResult()
                 .setTopicId(topicId2)
                 .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
@@ -753,7 +900,7 @@ class ShareCoordinatorServiceTest {
                 .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
                     .setPartition(partition1)
                     .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available.")))));
+                    .setErrorMessage("Share coordinator is not available."))));
         assertEquals(expectedResult, result);
     }
 
@@ -767,7 +914,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         String groupId = "group1";
@@ -779,7 +927,7 @@ class ShareCoordinatorServiceTest {
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new ReadShareGroupStateRequestData.ReadStateData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
@@ -804,7 +952,7 @@ class ShareCoordinatorServiceTest {
 
         HashSet<ReadShareGroupStateResponseData.ReadStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = Set.of(
             new ReadShareGroupStateResponseData.ReadStateResult()
                 .setTopicId(topicId2)
                 .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
@@ -816,7 +964,7 @@ class ShareCoordinatorServiceTest {
                 .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
                     .setPartition(partition1)
                     .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available.")))));
+                    .setErrorMessage("Share coordinator is not available."))));
         assertEquals(expectedResult, result);
     }
 
@@ -830,7 +978,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         String groupId = "group1";
@@ -842,7 +991,7 @@ class ShareCoordinatorServiceTest {
 
         ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
@@ -867,7 +1016,7 @@ class ShareCoordinatorServiceTest {
 
         HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> expectedResult = Set.of(
             new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
                 .setTopicId(topicId2)
                 .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
@@ -879,7 +1028,7 @@ class ShareCoordinatorServiceTest {
                 .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
                     .setPartition(partition1)
                     .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available.")))));
+                    .setErrorMessage("Share coordinator is not available."))));
         assertEquals(expectedResult, result);
     }
 
@@ -893,7 +1042,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         String groupId = "group1";
@@ -905,7 +1055,7 @@ class ShareCoordinatorServiceTest {
 
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new DeleteShareGroupStateRequestData.DeleteStateData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
@@ -928,7 +1078,7 @@ class ShareCoordinatorServiceTest {
 
         HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        Set<DeleteShareGroupStateResponseData.DeleteStateResult> expectedResult = Set.of(
             new DeleteShareGroupStateResponseData.DeleteStateResult()
                 .setTopicId(topicId2)
                 .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
@@ -940,7 +1090,68 @@ class ShareCoordinatorServiceTest {
                 .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
                     .setPartition(partition1)
                     .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available.")))));
+                    .setErrorMessage("Share coordinator is not available."))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testInitializeStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class),
+            () -> true
+        );
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition1)
+                    )),
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition2)
+                    ))
+            ));
+
+        CompletableFuture<InitializeShareGroupStateResponseData> future = service.initializeState(
+            requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<InitializeShareGroupStateResponseData.InitializeStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        Set<InitializeShareGroupStateResponseData.InitializeStateResult> expectedResult = Set.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))),
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))));
         assertEquals(expectedResult, result);
     }
 
@@ -954,7 +1165,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -963,7 +1175,7 @@ class ShareCoordinatorServiceTest {
         Uuid topicId = Uuid.randomUuid();
         int partition = 0;
 
-        when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
+        when(runtime.scheduleWriteOperation(any(), any(), any()))
             .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
 
         assertEquals(new WriteShareGroupStateResponseData()
@@ -982,6 +1194,7 @@ class ShareCoordinatorServiceTest {
                             .setPartition(partition)
                             .setLeaderEpoch(1)
                             .setStartOffset(1)
+                            .setDeliveryCompleteCount(9)
                             .setStateEpoch(1)
                             .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
                                 .setFirstOffset(2)
@@ -1004,7 +1217,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -1013,7 +1227,7 @@ class ShareCoordinatorServiceTest {
         Uuid topicId = Uuid.randomUuid();
         int partition = 0;
 
-        when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
+        when(runtime.scheduleWriteOperation(any(), any(), any()))
             .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_SERVER_ERROR.exception()));
 
         assertEquals(new ReadShareGroupStateResponseData()
@@ -1047,7 +1261,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -1056,7 +1271,7 @@ class ShareCoordinatorServiceTest {
         Uuid topicId = Uuid.randomUuid();
         int partition = 0;
 
-        when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
+        when(runtime.scheduleWriteOperation(any(), any(), any()))
             .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_SERVER_ERROR.exception()));
 
         assertEquals(new ReadShareGroupStateSummaryResponseData()
@@ -1090,7 +1305,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -1099,7 +1315,7 @@ class ShareCoordinatorServiceTest {
         Uuid topicId = Uuid.randomUuid();
         int partition = 0;
 
-        when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
+        when(runtime.scheduleWriteOperation(any(), any(), any()))
             .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
 
         assertEquals(new DeleteShareGroupStateResponseData()
@@ -1123,6 +1339,48 @@ class ShareCoordinatorServiceTest {
     }
 
     @Test
+    public void testInitializeFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class),
+            () -> true
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        when(runtime.scheduleWriteOperation(any(), any(), any())).thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
+
+        assertEquals(
+            new InitializeShareGroupStateResponseData().setResults(List.of(new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Unable to initialize share group state: This server does not host this topic-partition.")))
+            )),
+            service.initializeState(requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(groupId)
+                    .setTopics(List.of(new InitializeShareGroupStateRequestData.InitializeStateData()
+                        .setTopicId(topicId)
+                        .setPartitions(List.of(new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition)
+                        ))
+                    ))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
     public void testTopicPartitionFor() {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
@@ -1132,7 +1390,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         service.startup(() -> 1);
@@ -1161,7 +1420,8 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
             mock(Timer.class),
-            mock(PartitionWriter.class)
+            mock(PartitionWriter.class),
+            () -> true
         );
 
         String groupId = "group1";
@@ -1202,7 +1462,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             any(),
-            any(),
             any()
         )).thenReturn(
             CompletableFuture.completedFuture(Optional.of(10L))
@@ -1219,30 +1478,29 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
                 any(),
-                any(),
                 any());
 
-        timer.advanceClock(30005L); // prune should be called
+        timer.advanceClock(30005L); // Prune should be called.
         verify(runtime, times(1))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
                 any(),
-                any(),
                 any());
 
-        timer.advanceClock(30005L); // prune should be called
+        timer.advanceClock(30005L); // Prune should be called.
         verify(runtime, times(2))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1264,7 +1522,7 @@ class ShareCoordinatorServiceTest {
         TopicPartition tp1 = new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0);
         TopicPartition tp2 = new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 1);
 
-        when(runtime.activeTopicPartitions())
+        when(runtime.activeCoordinators())
             .thenReturn(List.of(tp1, tp2));
 
         when(writer.deleteRecords(
@@ -1284,7 +1542,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             eq(tp1),
-            any(),
             any()
         )).thenReturn(
             CompletableFuture.completedFuture(Optional.of(10L))
@@ -1295,7 +1552,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             eq(tp2),
-            any(),
             any()
         )).thenReturn(
             CompletableFuture.completedFuture(Optional.of(20L))
@@ -1312,14 +1568,15 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 2);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1328,14 +1585,12 @@ class ShareCoordinatorServiceTest {
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
                 any(),
-                any(),
                 any());
 
         timer.advanceClock(30005L); // Prune should be called as future completes exceptionally.
         verify(runtime, times(4))   // Second prune with 2 topic partitions.
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1359,7 +1614,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             any(),
-            any(),
             any()
         )).thenReturn(CompletableFuture.failedFuture(Errors.UNKNOWN_SERVER_ERROR.exception()));
 
@@ -1372,14 +1626,15 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1387,7 +1642,6 @@ class ShareCoordinatorServiceTest {
         verify(runtime, times(1))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1410,7 +1664,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             any(),
-            any(),
             any()
         )).thenReturn(CompletableFuture.completedFuture(Optional.of(20L)));
 
@@ -1423,14 +1676,15 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1438,7 +1692,6 @@ class ShareCoordinatorServiceTest {
         verify(runtime, times(1))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1460,7 +1713,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             any(),
-            any(),
             any()
         )).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
 
@@ -1472,14 +1724,16 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
+
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1487,7 +1741,6 @@ class ShareCoordinatorServiceTest {
         verify(runtime, times(1))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1517,7 +1770,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             any(),
-            any(),
             any()
         )).thenReturn(
             CompletableFuture.completedFuture(Optional.of(10L))
@@ -1533,14 +1785,15 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1549,14 +1802,12 @@ class ShareCoordinatorServiceTest {
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
                 any(),
-                any(),
                 any());
 
         timer.advanceClock(30005L); // prune should be called
         verify(runtime, times(2))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1590,7 +1841,6 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(
             eq("write-state-record-prune"),
             any(),
-            any(),
             any()
         )).thenReturn(
             CompletableFuture.completedFuture(Optional.of(10L))
@@ -1607,14 +1857,15 @@ class ShareCoordinatorServiceTest {
             new ShareCoordinatorMetrics(metrics),
             time,
             timer,
-            writer
+            writer,
+            () -> true
         ));
 
         service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
         verify(runtime, times(0))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1623,14 +1874,12 @@ class ShareCoordinatorServiceTest {
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
                 any(),
-                any(),
                 any());
 
         timer.advanceClock(30005L); // prune should be called
         verify(runtime, times(2))
             .scheduleWriteOperation(
                 eq("write-state-record-prune"),
-                any(),
                 any(),
                 any());
 
@@ -1643,29 +1892,335 @@ class ShareCoordinatorServiceTest {
         service.shutdown();
     }
 
+    @Test
+    public void testColdPartitionSnapshotTaskPeriodicityWithAllSuccess() throws Exception {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        MockTime time = new MockTime();
+        MockTimer timer = new MockTimer(time);
+        PartitionWriter writer = mock(PartitionWriter.class);
+
+        Metrics metrics = new Metrics();
+
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer,
+            () -> true
+        ));
+
+        when(runtime.scheduleWriteAllOperation(
+            eq("snapshot-cold-partitions"),
+            any()
+        )).thenReturn(List.of(CompletableFuture.completedFuture(null)));
+
+        service.startup(() -> 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
+        verify(runtime, times(0))
+            .scheduleWriteOperation(
+                eq("snapshot-cold-partitions"),
+                any(),
+                any());
+
+        timer.advanceClock(10005L); // Snapshotting should be called.
+        verify(runtime, times(1))
+            .scheduleWriteAllOperation(
+                eq("snapshot-cold-partitions"),
+                any());
+
+        timer.advanceClock(10005L); // Snapshotting should be called.
+        verify(runtime, times(2))
+            .scheduleWriteAllOperation(
+                eq("snapshot-cold-partitions"),
+                any());
+
+        checkMetrics(metrics);
+
+        service.shutdown();
+    }
+
+    @Test
+    public void testColdPartitionSnapshotTaskPeriodicityWithSomeFailures() throws Exception {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        MockTime time = new MockTime();
+        MockTimer timer = new MockTimer(time);
+        PartitionWriter writer = mock(PartitionWriter.class);
+
+        when(runtime.scheduleWriteAllOperation(
+            eq("snapshot-cold-partitions"),
+            any()
+        )).thenReturn(
+            List.of(CompletableFuture.completedFuture(null), CompletableFuture.failedFuture(new Exception("bad stuff")))
+        ).thenReturn(
+            List.of(CompletableFuture.completedFuture(null), CompletableFuture.completedFuture(null))
+        );
+
+        Metrics metrics = new Metrics();
+
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer,
+            () -> true
+        ));
+
+        service.startup(() -> 2);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mock(MetadataImage.class));
+        verify(runtime, times(0))
+            .scheduleWriteAllOperation(
+                eq("snapshot-cold-partitions"),
+                any());
+
+        timer.advanceClock(10005L); // Snapshotting should be called.
+        verify(runtime, times(1))   // For 2 topic partitions.
+            .scheduleWriteAllOperation(
+                eq("snapshot-cold-partitions"),
+                any());
+
+        timer.advanceClock(10005L); // Snapshotting should be called (despite previous partial failure).
+        verify(runtime, times(2))   // For 2 topic partitions.
+            .scheduleWriteAllOperation(
+                eq("snapshot-cold-partitions"),
+                any());
+
+        checkMetrics(metrics);
+
+        service.shutdown();
+    }
+
+    @Test
+    public void testPeriodicJobsDoNotRunWhenShareGroupsDisabled() throws InterruptedException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        PartitionWriter writer = mock(PartitionWriter.class);
+        MockTime time = new MockTime();
+        MockTimer timer = spy(new MockTimer(time));
+
+        Metrics metrics = new Metrics();
+
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer,
+            () -> false // So that the feature config is used.
+        ));
+
+        // Prune job.
+        when(runtime.scheduleWriteOperation(
+            eq("write-state-record-prune"),
+            any(),
+            any()
+        )).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
+
+        // Snapshot job.
+        when(runtime.scheduleWriteAllOperation(
+            eq("snapshot-cold-partitions"),
+            any()
+        )).thenReturn(List.of());
+
+        assertFalse(service.shouldRunPeriodicJob());
+
+        service.startup(() -> 1);
+
+        MetadataImage mockedImage = mock(MetadataImage.class, RETURNS_DEEP_STUBS);
+
+        // Feature disabled on start.
+        when(mockedImage.features().finalizedVersions().getOrDefault(eq(ShareVersion.FEATURE_NAME), anyShort())).thenReturn((short) 0);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mockedImage);   // Jobs will not execute as feature is OFF in image.
+
+        verify(timer, times(0)).add(any()); // Timer task not added.
+        verify(runtime, times(0)).scheduleWriteOperation(
+            eq("write-state-record-prune"),
+            any(),
+            any()
+        );
+        verify(runtime, times(0)).scheduleWriteAllOperation(
+            eq("snapshot-cold-partitions"),
+            any()
+        );
+        assertFalse(service.shouldRunPeriodicJob());
+
+        // Enable feature.
+        Mockito.reset(mockedImage);
+        when(mockedImage.features().finalizedVersions().getOrDefault(eq(ShareVersion.FEATURE_NAME), anyShort())).thenReturn((short) 1);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mockedImage);   // Jobs will execute as feature is ON in image.
+
+        verify(timer, times(2)).add(any()); // Timer task added twice (prune, snapshot).
+        timer.advanceClock(30001L);
+        verify(runtime, times(1)).scheduleWriteOperation(
+            eq("write-state-record-prune"),
+            any(),
+            any()
+        );
+        verify(runtime, times(1)).scheduleWriteAllOperation(
+            eq("snapshot-cold-partitions"),
+            any()
+        );
+        assertTrue(service.shouldRunPeriodicJob());
+
+        // Disable feature
+        Mockito.reset(mockedImage);
+        when(mockedImage.features().finalizedVersions().getOrDefault(eq(ShareVersion.FEATURE_NAME), anyShort())).thenReturn((short) 0);
+        service.onMetadataUpdate(mock(MetadataDelta.class), mockedImage);   // Jobs will not execute as feature is on in image.
+        timer.advanceClock(30001L);
+
+        verify(timer, times(4)).add(any()); // Tasks added but will return immediately.
+        verify(runtime, times(1)).scheduleWriteOperation(
+            eq("write-state-record-prune"),
+            any(),
+            any()
+        );
+        verify(runtime, times(1)).scheduleWriteAllOperation(
+            eq("snapshot-cold-partitions"),
+            any()
+        );
+        assertFalse(service.shouldRunPeriodicJob());
+
+        timer.advanceClock(30001L);
+        verify(timer, times(4)).add(any()); // No new additions.
+
+        service.shutdown();
+    }
+
+    @Test
+    public void testShareStateTopicConfigs() {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        MockTime time = new MockTime();
+        MockTimer timer = new MockTimer(time);
+        PartitionWriter writer = mock(PartitionWriter.class);
+
+        Metrics metrics = new Metrics();
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer,
+            () -> true
+        ));
+
+        List<String> propNames = List.of(
+            TopicConfig.CLEANUP_POLICY_CONFIG,
+            TopicConfig.COMPRESSION_TYPE_CONFIG,
+            TopicConfig.SEGMENT_BYTES_CONFIG,
+            TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG,
+            TopicConfig.RETENTION_MS_CONFIG
+        );
+        Properties actual = service.shareGroupStateTopicConfigs();
+        propNames.forEach(actual::remove);
+        assertTrue(actual.isEmpty());
+
+        service.shutdown();
+    }
+
+    @Test
+    public void testOnTopicsDeletedEmptyList() {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        MockTime time = new MockTime();
+        MockTimer timer = new MockTimer(time);
+        PartitionWriter writer = mock(PartitionWriter.class);
+
+        Metrics metrics = new Metrics();
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer,
+            () -> true
+        ));
+
+        service.startup(() -> 3);
+
+        when(runtime.scheduleWriteAllOperation(
+            eq("on-topics-deleted"),
+            any()
+        )).thenReturn(
+            List.of(
+                CompletableFuture.completedFuture(null),
+                CompletableFuture.completedFuture(null),
+                CompletableFuture.failedFuture(Errors.COORDINATOR_LOAD_IN_PROGRESS.exception())
+            )
+        );
+
+        assertDoesNotThrow(() -> service.onTopicsDeleted(Set.of(), BufferSupplier.NO_CACHING));
+        verify(runtime, times(0)).scheduleWriteAllOperation(
+            eq("on-topics-deleted"),
+            any()
+        );
+    }
+
+    @Test
+    public void testOnTopicsDeletedDoesNotThrowExp() {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        MockTime time = new MockTime();
+        MockTimer timer = new MockTimer(time);
+        PartitionWriter writer = mock(PartitionWriter.class);
+
+        Metrics metrics = new Metrics();
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer,
+            () -> true
+        ));
+
+        service.startup(() -> 3);
+
+        when(runtime.scheduleWriteAllOperation(
+            eq("on-topics-deleted"),
+            any()
+        )).thenReturn(
+            List.of(
+                CompletableFuture.completedFuture(null),
+                CompletableFuture.completedFuture(null),
+                CompletableFuture.failedFuture(Errors.COORDINATOR_LOAD_IN_PROGRESS.exception())
+            )
+        );
+
+        assertDoesNotThrow(() -> service.onTopicsDeleted(Set.of(Uuid.randomUuid()), BufferSupplier.NO_CACHING));
+        verify(runtime, times(1)).scheduleWriteAllOperation(
+            eq("on-topics-deleted"),
+            any()
+        );
+    }
+
     private void checkMetrics(Metrics metrics) {
-        Set<MetricName> usualMetrics = new HashSet<>(Arrays.asList(
+        Set<MetricName> usualMetrics = Set.of(
             metrics.metricName("write-latency-avg", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-latency-max", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-rate", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-total", ShareCoordinatorMetrics.METRICS_GROUP)
-        ));
+        );
 
         usualMetrics.forEach(metric -> assertTrue(metrics.metrics().containsKey(metric)));
     }
 
     private void checkPruneMetric(Metrics metrics, String topic, int partition, boolean checkPresence) {
-        boolean isPresent = metrics.metrics().containsKey(
-            metrics.metricName(
-                "last-pruned-offset",
-                ShareCoordinatorMetrics.METRICS_GROUP,
-                "The offset at which the share-group state topic was last pruned.",
-                Map.of(
-                    "topic", topic,
-                    "partition", Integer.toString(partition)
-                )
-            )
-        );
+        boolean isPresent = metrics.metrics().containsKey(metrics.metricName(
+            "last-pruned-offset",
+            ShareCoordinatorMetrics.METRICS_GROUP,
+            "The offset at which the share-group state topic was last pruned.",
+            Map.of("topic", topic, "partition", Integer.toString(partition))
+        ));
         assertEquals(checkPresence, isPresent);
     }
 }
